manuscripts/elife-94586/v1/manuscript.md
# Overflow metabolism originates from growth optimization and cell heterogeneity

## Authors

- Xin Wang<sup>1</sup> ([ORCID: 0000-0001-6479-395X](https://orcid.org/0000-0001-6479-395X)) †

### Affiliations

1. School of Physics, Sun Yat-sen University Guangzhou China ([ROR:0064kty71](https://ror.org/0064kty71))

† Corresponding author

## Abstract

A classic problem in metabolism is that fast-proliferating cells use seemingly wasteful fermentation for energy biogenesis in the presence of sufficient oxygen. This counterintuitive phenomenon, known as overflow metabolism or the Warburg effect, is universal across various organisms. Despite extensive research, its origin and function remain unclear. Here, we show that overflow metabolism can be understood through growth optimization combined with cell heterogeneity. A model of optimal protein allocation, coupled with heterogeneity in enzyme catalytic rates among cells, quantitatively explains why and how cells choose between respiration and fermentation under different nutrient conditions. Our model quantitatively illustrates the growth rate dependence of fermentation flux and enzyme allocation under various perturbations and is fully validated by experimental results in Escherichia coli. Our work provides a quantitative explanation for the Crabtree effect in yeast and the Warburg effect in cancer cells and can be broadly used to address heterogeneity-related challenges in metabolism.

## Introduction

A prominent feature of cancer metabolism is that tumor cells excrete large quantities of fermentation products in the presence of sufficient oxygen (Hanahan and Weinberg, 2011; Liberti and Locasale, 2016; Vander Heiden et al., 2009). This process, discovered by Otto Warburg in the 1920s (Warburg, 1924) and known as the Warburg effect, aerobic glycolysis, or overflow metabolism (Basan et al., 2015; Hanahan and Weinberg, 2011; Liberti and Locasale, 2016; Vander Heiden et al., 2009), is ubiquitous among fast-proliferating cells across a broad spectrum of organisms (Vander Heiden et al., 2009), ranging from bacteria (Basan et al., 2015; Holms, 1996; Meyer et al., 1984; Nanchen et al., 2006; Neidhardt et al., 1990) and fungi (De Deken, 1966) to mammalian cells (Hanahan and Weinberg, 2011; Liberti and Locasale, 2016; Vander Heiden et al., 2009). For microbes, cells use standard respiration when nutrients are scarce, while they use the counterintuitive aerobic glycolysis when nutrients are adequate, just analogous to normal tissues and cancer cells, respectively (Vander Heiden et al., 2009).

Over the past century, and particularly through extensive studies in the last two decades (Liberti and Locasale, 2016), various rationales for overflow metabolism have been proposed (Basan et al., 2015; Chen and Nielsen, 2019; Majewski and Domach, 1990; Molenaar et al., 2009; Niebel et al., 2019; Peebo et al., 2015; Pfeiffer et al., 2001; Shlomi et al., 2011; Vander Heiden et al., 2009; Varma and Palsson, 1994; Vazquez et al., 2010; Vazquez and Oltvai, 2016; Zhuang et al., 2011). Notably, Basan et al., 2015 provided a systematic characterization of this process, including various types of experimental perturbations. Currently, prevalent explanations (Basan et al., 2015; Chen and Nielsen, 2019) hold that overflow metabolism arises from the proteome efficiency in fermentation being consistently higher than that in respiration. However, recent studies have shown that the measured proteome efficiency in respiration is actually higher than in fermentation for many yeast and cancer cells (Shen et al., 2024), even though these cells generate fermentation products through aerobic glycolysis. This finding (Shen et al., 2024) apparently contradicts the prevalent explanations (Basan et al., 2015; Chen and Nielsen, 2019). Furthermore, most explanations (Basan et al., 2015; Chen and Nielsen, 2019; Majewski and Domach, 1990; Shlomi et al., 2011; Varma and Palsson, 1994; Vazquez et al., 2010; Vazquez and Oltvai, 2016; Zhuang et al., 2011) rely on the assumption that cells optimize their growth rate for a given rate of carbon influx (i.e. nutrient uptake rate) under each nutrient condition (or its equivalents). However, this assumption remains open to further scrutiny, as the given factors in a nutrient condition are the identities and concentrations of the carbon sources (Molenaar et al., 2009; Scott et al., 2010; Wang et al., 2019), rather than the carbon influx. Therefore, the origin and function of overflow metabolism still remain unclear (DeBerardinis and Chandel, 2020; Hanahan and Weinberg, 2011; Liberti and Locasale, 2016; Vander Heiden et al., 2009).

Why have microbes and cancer cells evolved to possess the seemingly wasteful strategy of aerobic glycolysis? For unicellular organisms, there is evolutionary pressure (Vander Heiden et al., 2009) to optimize cellular resources for rapid growth (Dekel and Alon, 2005; Edwards et al., 2001; Hui et al., 2015; Li et al., 2018; Scott et al., 2010; Towbin et al., 2017; Wang et al., 2019; You et al., 2013). In particular, it has been shown that cells allocate protein resources for optimal growth (Hui et al., 2015; Scott et al., 2010; Wang et al., 2019; You et al., 2013), and the most efficient protein allocation corresponds to elementary flux mode (Müller et al., 2014; Wortel et al., 2014). For cancer cells, disrupting the growth control system and evading immune destruction from the host are prominent hallmarks of their survival (Hanahan and Weinberg, 2011), which in certain ways mimic the evolutionary pressure on microbes to optimize cell growth rate. In this study, we apply the optimal growth principle of microbes, which also roughly holds for cancer cells, to a heterogeneous framework to address the puzzle of aerobic glycolysis. We use Escherichia coli as a typical example to show that overflow metabolism can be understood from optimal protein allocation combined with heterogeneity in enzyme catalytic rates. The optimal growth strategy varies between respiration and fermentation depending on the concentration and type of the nutrient, and the combination with cell heterogeneity results in the standard picture (Basan et al., 2015; Holms, 1996; Meyer et al., 1984; Nanchen et al., 2006; van Hoek et al., 1998) of overflow metabolism. Our model quantitatively illustrates the growth rate dependence of fermentation/respiration flux and enzyme allocation under various types of perturbations in E. coli. Furthermore, it provides a quantitative explanation for the data on the Crabtree effect in yeast and the Warburg effect in cancer cells (Bartman et al., 2023; Shen et al., 2024).

## Results

### Coarse-grained model

Based on the topology of the metabolic network (Neidhardt et al., 1990; Nelson and Cox, 2008) (see Figure 1A), we classify the carbon sources that enter from the upper part of glycolysis into Group A (Wang et al., 2019) and the precursors of biomass components (such as amino acids) into five pools. Specifically, each pool is designated according to its entry point (see Figure 1A and Appendix 2.2 for details): a1 (entry point: G6P/F6P), a2 (entry point: GA3P/3PG/PEP), b (entry point: pyruvate/acetyl-CoA), c (entry point: $\alpha$-ketoglutarate), and d (entry point: oxaloacetate). Pools a1 and a2 are also combined as Pool a due to the joint synthesis of precursors. Then, the metabolic network for Group A carbon source utilization (see Figure 1A) can be coarse-grained into a model shown in Figure 1B (see Appendix 3.1 for details), where node $A$ represents an arbitrary carbon source of Group A. Evidently, Figure 1B is topologically identical to Figure 1A. Each coarse-grained arrow in Figure 1B represents a stoichiometric flux $J_{i}$, which delivers carbon flux and may be accompanied by energy consumption or biogenesis (e.g. $J_{1}$, $J_{a1}$; see Figure 1A–B and Appendix 1—figure 1A).

![Figure 1.](https://cdn.elifesciences.org/articles/94586/elife-94586-fig1-v1.jpg)

**Figure 1.:** (A) The central metabolic network of carbon source utilization. The Group A carbon sources (Wang et al., 2019) are labeled with green squares. (B) Coarse-grained model for Group A carbon source utilization. (C) Model predictions (see Equations S47 and S160) and experimental results (Basan et al., 2015; Holms, 1996) of overflow metabolism, covering the data for all the Group A carbon sources shown in (A). (D) Growth rate dependence of respiration and fermentation fluxes (see Equations S47 and S160). (E) The proteome efficiencies for energy biogenesis in the respiration and fermentation pathways vary with growth rate as functions of the nutrient quality of a Group A carbon source (see Equations S31 and S36). See Appendices 9 and 11 for model parameter settings and experimental data sources (Basan et al., 2015; Holms, 1996; Hui et al., 2015) for Figures 1—4 of E. coli.

In fact, the stoichiometric flux $J_{i}$ scales with the cell population. For comparison with experiments, we define the normalized flux $J_{i}^{(N)}≡J_{i}⋅m_{0}/m_{0}M_{carbon}M_{carbon}$, which can be regarded as the flux per unit of biomass (the superscript ‘(N)’ stands for normalized; see Appendix 2.3–2.4 for details). Here, $M_{carbon}$ represents the carbon mass of the cell population, and $m_{0}$ is the weighted average carbon mass of metabolite molecules at the entry of precursor pools (see Equation S17). Then, the cell growth rate $\lambda$ can be represented by the total outflow of the normalized fluxes: $\lambda=\sumia1,a2,b,c,dJ_{i}^{(N)}$ (see Appendix 2.4). The normalized fluxes of respiration and fermentation are $J_{r}^{(N)}≡J_{4}^{(N)}$ and $J_{f}^{(N)}≡J_{6}^{(N)}$, respectively (see Figure 1A and B). In practice, each $J_{i}^{(N)}$ is characterized by two quantities: the proteomic mass fraction $ϕ_{i}$ of the enzyme dedicated to carrying the flux and the substrate quality $κ_{i}$, such that $J_{i}^{(N)}=ϕ_{i}⋅κ_{i}$. We take the Michaelis-Menten form for the enzyme kinetics (Nelson and Cox, 2008), and then $κ_{i}≡k_{i}⋅\frac{[S_{i}]}{[S_{i}]+K_{i}}$ (see Equation S12 and Appendix 2.4 for details), where $[S_{i}]$ is the concentration of substrate $S_{i}$, and $K_{i}$ is the Michaelis constant. For each intermediate node and reaction along the pathway (e.g. node $M_{1}$ in $J_{a1}$), the substrate quality $κ_{i}$ can be approximated as a constant (see Appendix 2.5): $κ_{i}≡k_{i}⋅\frac{[S_{i}]}{[S_{i}]+K_{i}}≈k_{i}$, where $[S_{i}]\geqK_{i}$ generally holds true in bacteria (Bennett et al., 2009; Park et al., 2016). However, the nutrient quality $κ_{A}$ is a variable that depends on the nutrient type and concentration of a Group A carbon source (see Equation S27).

Generally, there are three independent fates for a Group A carbon source in the metabolic network (Chen and Nielsen, 2019): fermentation, respiration, and biomass generation (see Appendix 1—figure 1C-E). Each draws a distinct proteome fraction of $ϕ_{f}$, $ϕ_{r}$ and $ϕ_{BM}$, with no overlap between them (see Appendix 3.1). The net effect of the first two fates is energy biogenesis, while the last one generates precursors for biomass, accompanied by energy biogenesis. By applying the proteomic constraint that there is a maximum fraction, $ϕ_{max}$, for proteome allocation: $ϕ_{max}≈0.48$ (Scott et al., 2010), we have:

$$
ϕ_{f}+ϕ_{r}+ϕ_{BM}=ϕ_{max}.
$$

In fact, Equation 1 is equivalent to $ϕ_{R}+ϕ_{A}+\sumj=16ϕ_{j}+\sumia1,a2,b,c,dϕ_{i}=ϕ_{max}$ (see Appendix 3.1 for derivation details), where $ϕ_{R}$ and $ϕ_{A}$ represent the proteomic mass fractions of the active ribosome-affiliated proteins and the cargo proteins responsible for the uptake of the Group A carbon source, respectively. During cell proliferation, ribosomes serve as the factories for protein synthesis and are primarily composed of proteins (Neidhardt et al., 1990; Nelson and Cox, 2008), while other biomass components, such as RNA, are optimally produced (Kostinski and Reuveni, 2020) in accordance with the growth rate determined by protein synthesis. Thus, the cell growth rate is proportional to $ϕ_{R}: \lambda=ϕ_{R}⋅κ_{t}$, where $κ_{t}$ is a parameter set by the translation rate (Scott et al., 2010) (see Appendix 2.1 for details), which can be approximated as a constant within the growth rate range of interest (Dai et al., 2017).

For balanced cell growth in bacteria, the energy demand $J_{E}$, expressed as the stoichiometric energy flux in ATP, is generally proportional to the biomass production rate (Ebenhöh et al., 2024), since the proportion of maintenance energy is roughly negligible (Locasale and Cantley, 2010) (see Appendix 10 for the cases of yeast and tumor cells). Thus, the normalized flux of energy demand in ATP, denoted as $J_{E}^{(N)}$, representing the energy demand per unit of biomass, is proportional to the growth rate $\lambda$ (see Appendix 3.1 for details):

$$
J_{E}^{(N)}=η_{E}⋅\lambda,
$$

where $η_{E}$ is an energy coefficient (see Equations S25 and S26 for details). By converting all energy currencies (such as NADH, FADH2, etc.) into ATP, the normalized energy fluxes for respiration and fermentation are given by $J_{r}^{(E)}=\beta_{r}^{(A)}⋅J_{r}^{(N)}/2$ and $J_{f}^{(E)}=\beta_{f}^{(A)}⋅J_{f}^{(N)}/2$, where $\beta_{r}^{(A)}$ and $\beta_{f}^{(A)}$ are the stoichiometric coefficients of ATP production per glucose in each pathway (see Appendix 1—figure 1C-E and Appendix 3.1 for details). The denominator coefficient of ‘2’ is derived from the stoichiometry of the coarse-grained reaction $M_{1}→2M_{2}$ (see Figure 1A and B). Applying the criteria of flux balance (i.e. mass conservation; see Appendix 2.3) at each intermediate node ($M_{i}$, $i$ = 1, …, 5) and precursor pool (Pool $i$, $i=$ a1, a2, b, c, d), along with the constraints of proteome allocation (see Equation 1) and energy demand (see Equation 2), we obtain the relations between normalized energy fluxes and growth rate for a given nutrient condition with a fixed $κ_{A}$ (see Appendix 3.1 for details):

$$
{J_{r}^{(E)}+J_{f}^{(E)}=\phi⋅\lambda,\frac{J_{r}^{(E)}}{\epsilon_{r}}+\frac{J_{f}^{(E)}}{\epsilon_{f}}=ϕ_{max}−ψ⋅\lambda,
$$

where $\phi$ is a constant coefficient primarily determined by the coefficient $η_{E}$ (see Equation S33), and $\phi⋅\lambda$ represents the normalized flux of energy demand, excluding energy biogenesis from the biomass synthesis pathway. The coefficients $ψ$, $\epsilon_{r}$, and $\epsilon_{f}$ are functions of $κ_{A}$, such that their values are highly dependent on nutrient conditions. $ψ^{−1}$ denotes the proteome efficiency for biomass generation in the biomass synthesis pathway (see Equation S32), defined as $ψ^{−1}≡\lambda/ϕ_{BM}$ (see Appendix 3.1). $\epsilon_{r}$ and $\epsilon_{f}$ represent the proteome efficiencies for energy biogenesis in the respiration and fermentation pathways, respectively, defined as the normalized energy fluxes expressed in ATP generated per proteomic mass fraction, with $\epsilon_{r}≡J_{r}^{(E)}/ϕ_{r}$ and $\epsilon_{f}≡J_{f}^{(E)}/ϕ_{f}$. Hence,

$$
{\epsilon_{r}=\frac{\beta_{r}^{(A)}}{1/κ_{A}+1/κ_{r}^{(A)}},\epsilon_{f}=\frac{\beta_{f}^{(A)}}{1/κ_{A}+1/κ_{f}^{(A)}},
$$

where both $κ_{r}^{(A)}$ and $κ_{f}^{(A)}$ are composite parameters that can be approximated as constants, with $1/κ_{r}^{(A)}≡1/κ_{1}+2/κ_{2}+2/κ_{3}+2/κ_{4}$ and $1/κ_{f}^{(A)}≡1/κ_{1}+2/κ_{2}+2/κ_{6}$ (see Appendices 2.5 and 3.1 for details).

### Origin of overflow metabolism

The standard picture of overflow metabolism (Basan et al., 2015; Holms, 1996; Meyer et al., 1984; Nanchen et al., 2006; van Hoek et al., 1998) is exemplified by the experimental data (Basan et al., 2015) presented in Figure 1C, where the fermentation flux exhibits a threshold-analog dependence on the growth rate $\lambda$. It is well established that respiration is significantly more efficient than fermentation in terms of energy biogenesis per unit of carbon (i.e. $\beta_{r}^{(A)}>\beta_{f}^{(A)}$) (Nelson and Cox, 2008; Vander Heiden et al., 2009). Then, why do cells bother to use the seemingly wasteful fermentation pathway? We proceed to address this issue by applying optimal protein allocation (Scott et al., 2010; Wang et al., 2019) within the framework of optimal growth.

For cell proliferation in a given nutrient condition (i.e. with a fixed $κ_{A}$), the values of $\epsilon_{r}$, $\epsilon_{f}$, and $ψ$ are determined (see Equations 4 and S32). However, the growth rate $\lambda$ can be influenced by protein allocation between respiration and fermentation, specifically $ϕ_{r}$ and $ϕ_{f}$, according to the governing equation (Equation 3). If $\epsilon_{r}>\epsilon_{f}$, that is, if the proteome efficiency in respiration is higher than that in fermentation, then $\lambda=\frac{ϕ_{max}−J_{f}^{(E)}(1/\epsilon_{f}−1/\epsilon_{r})}{ψ+\phi/\epsilon_{r}}\leq\frac{ϕ_{max}}{ψ+\phi/\epsilon_{r}}$. The optimal growth strategy is $ϕ_{f}=J_{f}^{(E)}=0$, meaning that the cell exclusively uses respiration. Conversely, if $\epsilon_{f}>\epsilon_{r}$, then $ϕ_{r}=J_{r}^{(E)}=0$ is optimal, and the cell solely uses fermentation. In either case, the choice between respiration and fermentation for growth optimization is determined by comparing their proteome efficiencies.

In practice, both proteome efficiencies $\epsilon_{r}$ and $\epsilon_{f}$ are functions of nutrient quality $κ_{A}$, which can be significantly influenced by the nutrient type and concentration of the carbon source (see Equations 4 and S27). Therefore, the optimal growth strategy may vary depending on the nutrient conditions. In nutrient-poor conditions where $κ_{A}≪κ_{r}^{(A)}$ and $κ_{A}≪κ_{f}^{(A)}$, the proteome efficiencies can be approximated by $\epsilon_{r}≈\beta_{r}^{(A)}⋅κ_{A}$ and $\epsilon_{f}≈\beta_{f}^{(A)}⋅κ_{A}$ (see Equation 4), and hence $\epsilon_{r}(κ_{A})>\epsilon_{f}(κ_{A})$ (since $\beta_{r}^{(A)}>\beta_{f}^{(A)}$), meaning that the proteome efficiency of respiration is higher than that of fermentation under these conditions. In contrast, in rich media, using parameters for $κ_{i}$ derived from in vivo/in vitro experimental data for E. coli (see Appendix 1—table 1, Appendix 1—table 2 and Appendix 7.1–7.2), we obtain $\epsilon_{r}(κ_{glucose}^{(ST)})<\epsilon_{f}(κ_{glucose}^{(ST)})$ with Equation 4 (see also Equations S39-S40), where $κ_{glucose}^{(ST)}$ represents the substrate quality of glucose at saturated concentration (abbreviated as ‘ST’ in the superscript). This indicates that the proteome efficiency in fermentation is higher than that in respiration for bacteria in rich media. Indeed, recent studies have validated that the measured proteome efficiency in fermentation is higher than in respiration for E. coli in lactose at saturated concentration (Basan et al., 2015), i.e., $\epsilon_{r}(κ_{lactose}^{(ST)})<\epsilon_{f}(κ_{lactose}^{(ST)})$. In Figure 1E, we present the growth rate dependence of proteome efficiencies $\epsilon_{r}$ and $\epsilon_{f}$ in a three-dimensional (3D) format using the collected data shown in Appendix 1—table 1, where $\epsilon_{r}$, $\epsilon_{f}$ and the growth rate $\lambda$ all vary as functions of nutrient quality $κ_{A}$. Furthermore, the ratio $Δ$ (defined as $Δ(κ_{A})≡\epsilon_{f}(κ_{A})/\epsilon_{r}(κ_{A})$) is a monotonically increasing function of $κ_{A}$, and there exists a critical value of $κ_{A}$ (denoted as $κ_{A}^{(C)}$; see Appendix 3.2 for details) satisfying $Δ(κ_{A}^{(C)})=1$. Below $κ_{A}^{(C)}$, where the nutrient is poorer and the cell grows slowly, the proteome efficiency of fermentation is lower than that of respiration (i.e. $\epsilon_{f}<\epsilon_{r}$), hence respiration is the optimal choice (with $\lambda=ϕ_{max}⋅(ψ+\phi/\epsilon_{r})^{−1}$). Above $κ_{A}^{(C)}$, where the nutrient is richer and the cell grows faster, fermentation is more efficient than respiration in terms of proteome efficiency (i.e. $\epsilon_{f}>\epsilon_{r}$) and becomes the optimal growth strategy (with $\lambda=ϕ_{max}⋅(ψ+\phi/\epsilon_{f})^{−1}$). This analysis qualitatively explains the phenomenon of aerobic glycolysis.

For a quantitative understanding of overflow metabolism, let us first consider the homogeneous case, where all cells share identical biochemical parameters. For optimal protein allocation, the relation between fermentation flux and growth rate under nutrient variation (with significantly varying $κ_{A}$) is given by $J_{f}^{(E)}=\phi⋅\lambda⋅\theta(\lambda−\lambda_{C})$, where ‘$\theta$’ represents the Heaviside step function, and $\lambda_{C}$ denotes the critical growth rate corresponding to the nutrient condition with nutrient quality $κ_{A}^{(C)}$ (i.e.  $\lambda_{C}≡\lambda(κ_{A}^{(C)})$). Similarly, the growth rate dependence of respiration flux is $J_{r}^{(E)}=\phi⋅\lambda⋅[1−\theta(\lambda−\lambda_{C})]$. These digital response outcomes are consistent with the numerical simulation findings of Molenaar et al., 2009. However, they are clearly incompatible with the threshold-analog response observed in the standard picture of overflow metabolism (Basan et al., 2015; Holms, 1996; Meyer et al., 1984; Nanchen et al., 2006; van Hoek et al., 1998).

To address this issue, we take into account cell heterogeneity, which is ubiquitous in both microbes (Ackermann, 2015; Bagamery et al., 2020; Balaban et al., 2004; Nikolic et al., 2013; Solopova et al., 2014; Wallden et al., 2016; Yaginuma et al., 2014; Zhang et al., 2018) and tumor cells (Duraj et al., 2021; Shibao et al., 2018; Hanahan and Weinberg, 2011; Hensley et al., 2016). In the context of the Warburg effect or overflow metabolism, experimental studies have reported significant metabolic heterogeneity in the choice between respiration and fermentation within a cell population (Bagamery et al., 2020; Duraj et al., 2021; Shibao et al., 2018; Hensley et al., 2016; Nikolic et al., 2013). Motivated by the observation that the turnover number ($k_{cat}$ value) of a catalytic enzyme varies considerably between in vitro and in vivo measurements (Davidi et al., 2016; García-Contreras et al., 2012), we note that the concentrations of potassium and phosphate, which vary from cell to cell, have a significant impact on the $k_{cat}$ values of metabolic enzymes (García-Contreras et al., 2012). Therefore, within a cell population, there is a distribution of $k_{cat}$ values for a catalytic enzyme, commonly referred to as extrinsic noise (Elowitz et al., 2002). For simplicity, we assume that the $k_{cat}$ values for each enzyme follow a Gaussian distribution. Consequently, the proteome efficiencies $\epsilon_{r}$ and $\epsilon_{f}$, which are crucial for determining the choice between respiration and fermentation, also follow Gaussian distributions (see Appendix 8 for details). This variability leads to diverse distributions of single-cell growth rates across different carbon sources (see Equations S155-S157 and S163-S165), which has been fully verified by recent experiments using isogenic E. coli at single-cell resolution (Wallden et al., 2016; see Appendix 1—figure 2B). Accordingly, the critical growth rate $\lambda_{C}$ is expected to follow a Gaussian distribution $N(\mu_{\lambda_{C}},\sigma_{\lambda_{C}}^{2})$ within a cell population (see Appendix 8 for details), where $\mu_{\lambda_{C}}$ is approximated by the deterministic result of $\lambda_{C}$ (Equation S43). Assuming the coefficient of variation (CV) of $\lambda_{C}$ is $\sigma_{\lambda_{C}}/\mu_{C}=12%$, or equivalently that the CV for the catalytic rate of each metabolic enzyme is 25%, we derive the growth rate dependence of fermentation and respiration fluxes (see Appendix 3.3 for details):

$$
{J_{f}^{(N)}(\lambda)=\frac{\phi⋅\lambda}{\beta_{f}^{(A)}}⋅[erf(\frac{\lambda−\mu_{\lambda_{C}}}{\sqrt{2}\sigma_{\lambda_{C}}})+1],J_{r}^{(N)}(\lambda)=\frac{\phi⋅\lambda}{\beta_{r}^{(A)}}⋅[1−erf(\frac{\lambda−\mu_{\lambda_{C}}}{\sqrt{2}\sigma_{\lambda_{C}}})],
$$

where ‘erf’ represents the error function. The fermentation flux exhibits a threshold-analog relation with the growth rate (the red curves in Figures 1C–D—3B, D and F), while the respiration flux (the blue curve in Figure 1D) decreases as the fermentation flux increases. In Figure 1C–D, we observe that the model results (see Equation 5 and Appendix 9 for details; parameters are set based on the experimental data shown in Appendix 1—table 1) quantitatively agree with the experimental data from E. coli (Basan et al., 2015; Holms, 1996). The fermentation flux is represented by the acetate secretion rate $J_{actate}^{(M)}=2J_{f}^{(N)}$, and the respiration flux is exemplified by the carbon dioxide flux $J_{CO_{2},r}^{(M)}=6J_{r}^{(N)}$ (the superscript ‘(M)’ represents the measurable flux in the unit of mM/OD600/h; see Appendix 9.1 for details). By incorporating cell heterogeneity, our model of optimal protein allocation quantitatively explains overflow metabolism.

### Testing the model through perturbations

To further test our model, we systematically investigate its predictions under various types of perturbations and compare them with experimental data from existing studies (Basan et al., 2015; Holms, 1996) (see Appendices 4 and 5.1 for details).

First, we consider the proteomic perturbation caused by overexpression of useless proteins encoded by the lacZ gene (i.e. $ϕ_{Z}$ perturbation) in E. coli. The net effect of the $ϕ_{Z}$ perturbation is that the maximum fraction of the proteome available for resource allocation changes from $ϕ_{max}$ to $ϕ_{max}−ϕ_{Z}$ (Basan et al., 2015), where $ϕ_{Z}$ is the proteomic mass fraction of useless proteins. In a cell population, the critical growth rate $\lambda_{C}(ϕ_{Z})$ still follows a Gaussian distribution $N(\mu_{\lambda_{C}}(ϕ_{Z}),\sigma_{\lambda_{C}}(ϕ_{Z})^{2})$, where the CV of $\lambda_{C}(ϕ_{Z})$ remains unchanged. Consequently, the growth rate dependence of fermentation flux changes to $J_{f}^{(N)}=\frac{\phi⋅\lambda}{\beta_{f}^{(A)}}⋅[erf(\frac{\lambda−\mu_{\lambda_{C}}(ϕ_{Z})}{\sqrt{2}\sigma_{\lambda_{C}}(ϕ_{Z})})+1]$ (see Appendix 4 for model perturbation results regarding respiration flux), where both the growth rate $\lambda(κ_{A},ϕ_{Z})$ and the normalized fermentation flux $J_{f}^{(N)}(κ_{A},ϕ_{Z})$ are bivariate functions of $κ_{A}$ and $ϕ_{Z}$ (see Equations S49, S56 and S57). For each degree of LacZ expression (with fixed $ϕ_{Z}$), similar to wild-type strains, the fermentation flux exhibits a threshold-analog response to growth rate as $κ_{A}$ varies (see Figure 2C), which agrees quantitatively with experimental results (Basan et al., 2015). The shifts in the critical growth rate $\lambda_{C}(ϕ_{Z})$ are fully captured by $\mu_{\lambda_{C}}(ϕ_{Z})=\mu_{\lambda_{C}}(0)(1−ϕ_{Z}/ϕ_{Z}ϕ_{max}ϕ_{max})$. In contrast, for nutrient conditions with each fixed $κ_{A}$, since the growth rate changes with $ϕ_{Z}$ just like $\lambda_{C}(ϕ_{Z}):\lambda(κ_{A},ϕ_{Z})=\lambda(κ_{A},0)(1−ϕ_{Z}/ϕ_{max})$, the fermentation flux is then proportional to the growth rate for the varying levels of LacZ expression: $J_{f}^{(N)}=\frac{\phi}{\beta_{f}^{(A)}}⋅[erf(\frac{\lambda(κ_{A},0)−\mu_{\lambda_{C}}(0)}{\sqrt{2}\sigma_{\lambda_{C}}(0)})+1]⋅\lambda$, where the slope is a monotonically increasing function of the substrate quality $κ_{A}$. These scaling relations are well validated by the experimental data (Basan et al., 2015) shown in Figure 2B. Finally, in the case where both $κ_{A}$ and $ϕ_{Z}$ are free to vary, the growth rate dependence of fermentation flux presents a threshold-analog response surface in a 3D plot, where $ϕ_{Z}$ appears explicitly as the $y$-axis (see Figure 2A). Experimental data points (Basan et al., 2015) lie right on this surface, which is highly consistent with the model predictions.

![Figure 2.](https://cdn.elifesciences.org/articles/94586/elife-94586-fig2-v1.jpg)

**Figure 2.:** (A) A 3D plot of the relations among fermentation flux, growth rate, and the expression level of useless proteins. In this plot, both the acetate excretion rate and growth rate vary as bivariate functions of the nutrient quality of a Group A carbon source (denoted as $κ_{A}$) and the useless protein expression encoded by lacZ gene (denoted as $ϕ_{Z}$ perturbation; see Equations S57 and S160). (B) Growth rate dependence of the acetate excretion rate upon $ϕ_{Z}$ perturbation for each fixed nutrient condition (see Equations S58 and S160). (C) Growth rate dependence of the acetate excretion rate as $κ_{A}$ varies (see Equations S58 and S160), with each fixed expression level of LacZ.

Next, we study the influence of energy dissipation, which introduces an energy dissipation coefficient $w$ to Equation 2: $J_{E}^{(N)}=η_{E}⋅\lambda+w$. Similarly, the critical growth rate in this case, $\lambda_{C}(w)$, follows a Gaussian distribution $N(\mu_{\lambda_{C}}(w),\sigma_{\lambda_{C}}(w)^{2})$ in a cell population. The relation between the growth rate and fermentation flux can be characterized by: $J_{f}^{(N)}=\frac{\phi⋅\lambda+w}{\beta_{f}^{(A)}}⋅[erf(\frac{\lambda−\mu_{\lambda_{C}}(w)}{\sqrt{2}\sigma_{\lambda_{C}}(w)^{2}})+1]$ (see Appendix 4.2 for details). In Figure 3A–B, we present a comparison between the model results and experimental data (Basan et al., 2015) in 3D and 2D plots, which demonstrate good agreement. A notable characteristic of energy dissipation, as distinguished from $ϕ_{Z}$ perturbation, is that the fermentation flux increases despite a decrease in the growth rate when $κ_{A}$ is fixed.

![Figure 3.](https://cdn.elifesciences.org/articles/94586/elife-94586-fig3-v1.jpg)

**Figure 3.:** (A) A 3D plot of the relations among fermentation flux, growth rate, and the energy dissipation coefficient (see Equations S70 and S160). (B) Growth rate dependence of the acetate excretion rate as the nutrient quality $κ_{A}$ varies, with each fixed energy dissipation coefficient determined by or fitted from experimental data. (C) A 3D plot of the relations among fermentation flux, growth rate, and the translation efficiency (see Equations 85 and S160). Here, the translation efficiency is adjusted by the dose of chloramphenicol (Cm). (D) Growth rate dependence of the acetate excretion rate as $κ_{A}$ varies, with each fixed dose of Cm. (E) Coarse-grained model for pyruvate utilization. (F) The growth rate dependence of fermentation flux in pyruvate (see Equations 105 and S160) significantly differs from that of the Group A carbon sources (see Equations 47 and S160).

We proceed to analyze the impact of translation inhibition with different sub-lethal doses of chloramphenicol on E. coli. This type of perturbation introduces an inhibition coefficient $ι$ to the translation rate, thus turning $κ_{t}$ into $κ_{t}/ι+1$. Still, the critical growth rate $\lambda_{C}(ι)$ follows a Gaussian distribution $N(\mu_{\lambda_{C}}(ι),\sigma_{\lambda_{C}}(ι)^{2})$, and then, the growth rate dependence of fermentation flux is given by: $J_{f}^{(N)}=\frac{\phi⋅\lambda}{\beta_{f}^{(A)}}⋅[erf(\frac{\lambda−\mu_{\lambda_{C}}(ι)}{\sqrt{2}\sigma_{\lambda_{C}}(ι)})+1]$ (see Appendix 4.3 for details). In Appendix 1—figure 2D and E, we observe that the model predictions are generally consistent with the experimental data (Basan et al., 2015). However, a noticeable systematic discrepancy arises when the translation rate is low. Therefore, we consider maintenance energy, which is typically tiny and generally negligible for bacteria over the growth rate range of interest (Basan et al., 2015; Locasale and Cantley, 2010; Neidhardt, 1996). Encouragingly, by assigning a very small value to the maintenance energy coefficient $w_{0}$ (where $w_{0}=2.5(h^{−1})$), the model results for the growth rate-fermentation flux relation $J_{f}^{(N)}=\frac{\phi⋅\lambda+w_{0}}{\beta_{f}^{(A)}}⋅[erf(\frac{\lambda−\mu_{\lambda_{C}}(ι)}{\sqrt{2}\sigma_{\lambda_{C}}(ι)})+1]$ quantitatively agree with experiments (Basan et al., 2015) (see Figure 3C–D and Appendix 4.3 for details).

Finally, we consider the alteration of nutrient categories by switching to a non-Group A carbon source: pyruvate, which enters the metabolic network from the endpoint of glycolysis (Neidhardt et al., 1990; Nelson and Cox, 2008). The coarse-grained model for pyruvate utilization is shown in Figure 3E (see also Figure 1A), which shares identical precursor pools with those for Group A carbon sources, yet has several differences in the coarse-grained reactions. The growth rate dependencies of both the proteome efficiencies (see Appendix 1—figure 2H) and energy fluxes (see Figure 3F) are qualitatively similar to those of Group A carbon source utilization, while there are quantitative differences in the coarse-grained parameters (see Appendices 5.1 and 9 for derivation details). Most notably, the critical growth rate $\lambda_{C}^{(py)}$ and the ATP production per glucose in the fermentation pathway $\beta_{f}^{(py)}$ for pyruvate utilization are noticeably smaller than those for Group A sources (i.e. $\lambda_{C}$ and $\beta_{f}^{(A)}$, respectively). Consequently, the growth rate dependence of fermentation flux in pyruvate should present a distinctly different curve from that of Group A carbon sources (see Equations 5 and S105), which is fully validated by experimental results (Holms, 1996; see Figure 3F).

### Enzyme allocation under perturbations

As mentioned above, our coarse-grained model is topologically identical to the central metabolic network (see Figure 1A) and can thus predict enzyme allocation for each gene in glycolysis and the TCA cycle (see Appendix 1—figure 1B and Appendix 1—table 1) under various types of perturbations. In Figure 1B, the intermediate nodes $M_{1}$, $M_{2}$, $M_{3}$, $M_{4}$, and $M_{5}$ represent G6P, PEP, acetyl-CoA, $\alpha$-ketoglutarate, and oxaloacetate, respectively. Therefore, $ϕ_{1}$ and $ϕ_{2}$ correspond to enzymes involved in glycolysis (or at the junction of glycolysis and the TCA cycle), while $ϕ_{3}$ and $ϕ_{4}$ correspond to enzymes in the TCA cycle (see Figure 1A–B and Appendix 3.1).

We first consider enzyme allocation under carbon limitation by varying the nutrient type and concentration of a Group A carbon source (i.e. $κ_{A}$ perturbation). This has been extensively studied in more simplified models (Hui et al., 2015; You et al., 2013), where the growth rate dependence of enzyme allocation under $κ_{A}$ perturbation is generally described by a C-line response (Hui et al., 2015; You et al., 2013). Specifically, the genes responsible for digesting carbon compounds exhibit a linear increase in gene expression as the growth rate decreases (Hui et al., 2015; You et al., 2013). However, when it comes to enzymes catalyzing reactions between intermediate nodes, we gathered experimental data from existing studies (Hui et al., 2015) and found that the enzymes in glycolysis exhibit a completely different response pattern compared to those in the TCA cycle (see Appendix 1—figure 3A and B). This discrepancy cannot be explained by the C-line response. To address this issue, we apply the coarse-grained model described above (see Figure 1B) to calculate the growth rate dependence of enzyme allocation for each $ϕ_{i}$ ($i=1,2,3,4$) using model settings for wild-type strains, with no fitting parameters influencing the shape (see Equations S118-S119 and Appendix 9). In Figure 4A–B and Appendix 1—figure 3C-D, we see that the model predictions overall match with the experimental data (Hui et al., 2015) for representative genes from either glycolysis or the TCA cycle, and maintenance energy (with $w_{0}=2.5(h^{−1})$) has a negligible effect on this process. Still, there are minor discrepancies that arise from the basal expression of metabolic genes, which may be attributed to the fact that our model deals with relatively stable growth conditions while microbes need to be prepared for fluctuating environments (Basan et al., 2020; Kussell and Leibler, 2005; Mori et al., 2017).

We proceed to analyze the influence of $ϕ_{Z}$ perturbation and energy dissipation. In both cases, our model predicts a linear response to growth rate reduction for all genes in either glycolysis or the TCA cycle (see Appendix 6.2–6.3 for details). For $ϕ_{Z}$ perturbation, all predicted slopes are positive, and there are no fitting parameters involved (Equations S120-S121). In Figure 4C–D and Appendix 1—figure 3E-J, we show that our model quantitatively illustrates the experimental data (Basan et al., 2015) for representative genes in the central metabolic network, and there is a better agreement with experiments (Basan et al., 2015) by incorporating the maintenance energy (with $w_{0}=2.5(h^{−1})$ as aforementioned). For energy dissipation, however, the predicted slopes of the enzymes corresponding to $ϕ_{4}$ are negative, and there is a constraint that the slope signs of the enzymes corresponding to the same $ϕ_{i}$ ($i=1,2,3$) should be the same. In Appendix 1—figure 3K-N, we see that the model results (Equations S127 and S123) are consistent with experiments (Basan et al., 2015).

![Figure 4.](https://cdn.elifesciences.org/articles/94586/elife-94586-fig4-v1.jpg)

**Figure 4.:** (A, C) Relative protein expression of representative genes from glycolysis. (B, D) Relative protein expression of representative genes from the TCA cycle. (A, B) Results of the perturbation through changes in nutrient quality $κ_{A}$ (see Equation S119). (C, D) Results of proteomic perturbation via varied levels of expression of the useless protein LacZ (i.e. $ϕ_{Z}$ perturbation; see Equation S121).

### Explanation of the Crabtree effect in yeast and the Warburg effect in cancer cells

We proceed to apply our model to explain the Crabtree effect in yeast (Bagamery et al., 2020; De Deken, 1966; Shen et al., 2024) and the Warburg effect in tumors (Bartman et al., 2023; Duraj et al., 2021; Hanahan and Weinberg, 2011; Shen et al., 2024; Vander Heiden et al., 2009) with slight modifications using the optimal growth principle combined with cell heterogeneity (see Appendix 10 and Appendix 1—figure 5). For yeast and tumors, similar to the case of E. coli, the proteome efficiencies $\epsilon_{r}$ and $\epsilon_{f}$ are both increasing functions of nutrient quality $κ_{A}$ (see Equation S170). Under poor nutrient conditions (i.e. $κ_{A}$ is small), the proteome efficiency in respiration is higher than that in fermentation: $\epsilon_{r}>\epsilon_{f}$ (see Equations S174-S175), making respiration the optimal choice for growth optimization (see Equation S171). Conversely, when nutrients are abundant and $\epsilon_{f}>\epsilon_{r}$, aerobic glycolysis (i.e. fermentation) becomes the optimal growth strategy (see Equation S172). Further combination with cell heterogeneity results in the standard picture of overflow metabolism, which has indeed been observed in yeast (van Hoek et al., 1998). However, it remains challenging to tune the growth rate of cancer cells in vivo.

Recently, Shen et al., 2024 discovered that the proteome efficiency measured at the cell population level in respiration (i.e. $⟨\epsilon_{r}⟩$ ; where ‘$⟨⟩$’ denotes the population average) is higher than that in fermentation (i.e. $⟨\epsilon_{f}⟩$) for many yeast and cancer cells, despite the presence of fermentation fluxes through aerobic glycolysis. Evidently, this finding (Shen et al., 2024) contradicts prevalent explanations (Basan et al., 2015; Chen and Nielsen, 2019), which hold that overflow metabolism arises because the proteome efficiency in fermentation is consistently higher than in respiration. Nevertheless, our model may resolve this puzzle due to the incorporation of two important features. First, our model predicts that the proteome efficiency in respiration is larger than that in fermentation when nutrient quality is low (see Equations S174-S175). Second, and crucially, by accounting for cell heterogeneity, our model allows a proportion of cells to have a higher proteome efficiency in fermentation than in respiration, even when the overall proteome efficiency in respiration at the cell population level is greater than that in fermentation (i.e. $⟨\epsilon_{r}⟩>⟨\epsilon_{f}⟩$).

To compare our model results quantitatively with experimental data on yeast and tumors (Shen et al., 2024), we define $Pr_{f}≡\frac{J_{f}^{(E)}}{J_{f}^{(E)}+J_{r}^{(E)}}$ as the fraction of ATP produced through fermentation. To account for cell heterogeneity, we apply Gaussian distributions to enzyme turnover numbers, as described above. This yields the relationship between $Pr_{f}$ (i.e.$\frac{J_{f}^{(E)}}{J_{f}^{(E)}+J_{r}^{(E)}}$) and $⟨\epsilon_{r}⟩$ and $⟨\epsilon_{f}⟩$ through derivations (see Equations S180-S190 and Appendix 10 for details):

$$
\frac{J_{f}^{(E)}}{J_{f}^{(E)}+J_{r}^{(E)}}=\frac{1}{2}[erf(\frac{1−⟨\epsilon_{r}⟩/⟨\epsilon_{f}⟩}{\sqrt{2}⋅\sqrt{χ_{\epsilon_{r}}^{2}+χ_{\epsilon_{f}}^{2}⋅(⟨\epsilon_{r}⟩/⟨\epsilon_{f}⟩)^{2}}})+1],
$$

where $χ_{\epsilon_{r}}$ and $χ_{\epsilon_{f}}$ represent the CVs of proteome efficiencies $\epsilon_{r}$ and $\epsilon_{f}$, respectively. Due to the higher levels of cell heterogeneity in yeast (Bagamery et al., 2020) and cancer cells (Duraj et al., 2021; Shibao et al., 2018; Hanahan and Weinberg, 2011; Hensley et al., 2016), the CVs of $\epsilon_{r}$ and $\epsilon_{f}$ (i.e. $χ_{\epsilon_{r}}$ and $χ_{\epsilon_{f}}$) in these cells are expected to be significantly higher than those in E. coli, although their precise values are unknown. The values for the variables shown in Equation 6 can be obtained from experiments. Therefore, we plot the theoretical results from Equation 6 using $χ_{\epsilon_{r}}$ and $χ_{\epsilon_{f}}$ values of 0.25, 0.40, and 0.58 to compare with experimental data from yeast and in vivo mouse tumors (Bartman et al., 2023; Shen et al., 2024). As shown in Figure 5A–B, the theoretical results with $χ_{\epsilon_{r}}=χ_{\epsilon_{f}}=0.58$ align quantitatively with the experimental data (Bartman et al., 2023; Shen et al., 2024) on both logarithmic and linear scales, demonstrating that our model has the potential to quantitatively explain the Crabtree effect in yeast and the Warburg effect in cancer cells.

![Figure 5.](https://cdn.elifesciences.org/articles/94586/elife-94586-fig5-v1.jpg)

**Figure 5.:** (A) A linear scale representation on the $y$-axis. (B) A log scale representation on the $y$-axis. In (A–B), $⟨\epsilon_{r}⟩$ and $⟨\epsilon_{f}⟩$ represent the population averages of $\epsilon_{r}$ and $\epsilon_{f}$, while $χ_{\epsilon_{r}}$ and $χ_{\epsilon_{f}}$ are the coefficients of variation (CVs) of $\epsilon_{r}$ and $\epsilon_{f}⋅⟨\epsilon_{r}⟩/⟨\epsilon_{f}⟩$ represents the ratio of proteome efficiency between respiration and fermentation at the population-averaged level, while $J_{f}^{(E)}/(J_{f}^{(E)}+J_{r}^{(E)})$ stands for the fraction of energy flux generated by the fermentation pathway (see Equation 6). The data for yeast in batch culture and chemostat were calculated from experimental data of S. cerevisiae and I. orientalis (Shen et al., 2024). The data for mouse tumors were calculated from in vivo experimental data of pancreatic ductal adenocarcinoma (PDAC) and leukemic spleen of mice (Bartman et al., 2023; Shen et al., 2024). See Appendix 11 for detailed information on the experimental data sources (Bartman et al., 2023; Shen et al., 2024).

## Discussion

The phenomenon of overflow metabolism, or the Warburg effect, has been a long-standing puzzle in cell metabolism. Although many rationales have been proposed over the past century (Basan et al., 2015; Chen and Nielsen, 2019; Majewski and Domach, 1990; Molenaar et al., 2009; Niebel et al., 2019; Peebo et al., 2015; Pfeiffer et al., 2001; Shlomi et al., 2011; Vander Heiden et al., 2009; Varma and Palsson, 1994; Vazquez et al., 2010; Zhuang et al., 2011), contradictions persist (Shen et al., 2024), leaving the origin and function of this phenomenon unclear (DeBerardinis and Chandel, 2020; Hanahan and Weinberg, 2011; Vander Heiden et al., 2009). In this study, we use E. coli as a typical example and demonstrate that overflow metabolism can be understood through optimal protein allocation combined with cell heterogeneity. Under nutrient-poor conditions, the proteome efficiency of respiration is higher than that of fermentation (see Figure 1E), and thus the cell uses respiration to optimize growth. In rich media, however, the proteome efficiency of fermentation increases more rapidly and surpasses that of respiration (see Figure 1E), leading the cell to adopt fermentation as the optimal growth strategy. In further combination with cell heterogeneity in enzyme catalytic rates (Davidi et al., 2016; García-Contreras et al., 2012), our model quantitatively illustrates the threshold-analog response (Basan et al., 2015; Holms, 1996) in overflow metabolism (see Figure 1C). Furthermore, it quantitatively explains the data on the Crabtree effect in yeast and the Warburg effect in cancer cells (Bartman et al., 2023; Shen et al., 2024).

Mechanistically, the optimal growth strategy for the binary choice between respiration and fermentation can be facilitated by the direct sensing and comparison of proteome efficiencies between the two pathways (see Appendix 3.4). A growing body of evidence suggests that the cyclic AMP (cAMP)-cAMP receptor protein (CRP) system plays a crucial role in sensing proteome efficiency and executing the optimal strategy (Basan et al., 2015; Towbin et al., 2017; Valgepea et al., 2010; Wehrens et al., 2023). However, it has also been suggested that the cAMP-CRP system alone is insufficient, and that additional regulators remain to be identified to fully elucidate this mechanism (Basan et al., 2015; Valgepea et al., 2010). Furthermore, since the binary choice between respiration and fermentation is driven by the comparison of proteome efficiencies, the optimal growth principle in our model can be relaxed to the case where efficient protein allocation is required only for enzymes, rather than ribosomes. This allows our model to remain applicable under suboptimal growth conditions (see Appendix 3.4 for details), where recent experimental studies have shown that the inactive portion of ribosomes (i.e. ribosomes not bound to mRNAs) may vary with culturing conditions (Dai et al., 2017; Li et al., 2018) and between individual cells within the same culture (Pavlou et al., 2025), despite an overall trend toward growth optimization.

In existing rationales (Basan et al., 2015; Chen and Nielsen, 2019; Majewski and Domach, 1990; Shlomi et al., 2011; Varma and Palsson, 1994; Vazquez et al., 2010; Vazquez and Oltvai, 2016), the standard picture of overflow metabolism (Basan et al., 2015; Holms, 1996; Meyer et al., 1984; Nanchen et al., 2006; van Hoek et al., 1998) has primarily been illustrated by a threshold-linear response, which largely relies on the assumption that cells optimize their growth rate for a given rate of carbon influx under each nutrient condition (or similar equivalents; see Appendix 7.3). However, in practice, for microbes or tumor cells grown in vitro or in vivo, the given factors are the identity and concentration of the nutrient (Molenaar et al., 2009; Scott et al., 2010; Wang et al., 2019), rather than the rate of carbon influx. Additionally, prevalent explanations (Basan et al., 2015; Chen and Nielsen, 2019) suggest that overflow metabolism originates from the proteome efficiency in fermentation always being higher than that in respiration (see Appendix 7.3 for details). While it has been observed in E. coli that proteome efficiency in fermentation is higher than that in respiration for cells cultured in lactose at saturated concentration (Basan et al., 2015), Shen et al., 2024 reported that for many yeast and cancer cells, the proteome efficiency in fermentation is noticeably lower than that in respiration, despite the presence of aerobic glycolytic fermentation flux. This observation (Shen et al., 2024) evidently contradicts the prevalent explanations (Basan et al., 2015; Chen and Nielsen, 2019). Our model resolves this puzzle by significantly differing from existing rationales in its optimization principle, where we optimize cell growth rate purely through protein allocation without imposing a special constraint on carbon influx (see Appendix 7.3 for details). More importantly, our model incorporates cell heterogeneity, which is crucial for both explaining the threshold-analog response in overflow metabolism and for resolving this puzzle raised by Shen et al., 2024.

In the homogeneous case, the optimal growth strategy for growth rate dependent fermentation flux results in a digital response (see Equation S44), corresponding to an elementary flux mode (Müller et al., 2014; Wortel et al., 2014), which aligns with the numerical study by Molenaar et al., 2009 but is incompatible with the standard picture of overflow metabolism (Basan et al., 2015; Holms, 1996; Meyer et al., 1984; Nanchen et al., 2006; van Hoek et al., 1998). Furthermore, in this case, cells would not generate fermentation flux if the proteome efficiency in fermentation were lower than that in respiration, under the optimal growth framework. By incorporating heterogeneity in enzyme catalytic rates (Davidi et al., 2016; García-Contreras et al., 2012), the critical growth rate (i.e. threshold) shifts from a single value to a Gaussian distribution (see Equation S45 and Appendix 8 for details; see also Appendix 1—figure 4) across a cell population, thereby turning a digital response into the threshold-analog response observed in overflow metabolism (see Figure 1C). Moreover, cell heterogeneity allows a fraction of cells to possess a larger proteome efficiency in fermentation than in respiration despite the overall proteome efficiency in respiration at the cell population level is higher than in fermentation. This mechanism facilitates the fermentation flux in yeast and cancer cells observed by Shen et al., 2024 (see Figure 5A–B).

Our model results, based on cell heterogeneity, are further supported by observed distributions of single-cell growth rates in E. coli (Wallden et al., 2016) (see Appendix 1—figure 2B), as well as by experiments involving various types of perturbations (Basan et al., 2015; Holms, 1996; Hui et al., 2015), both in terms of acetate secretion patterns and gene expression in the central metabolic network (see Figures 2—4, Appendix 1—figures 2D and E and 3). Furthermore, the heterogeneity patterns predicted by our model for fermentation and respiration modes in an isogenic cell population under the same culturing conditions are highly consistent with the non-genetic heterogeneity observed in single-cell experiments with E. coli (Nikolic et al., 2013) and S. cerevisiae (Bagamery et al., 2020), and align with experiments on intra-tumor heterogeneity in glioblastoma (Duraj et al., 2021; Shibao et al., 2018). Finally, our model can be broadly applied to address heterogeneity-related challenges in metabolism on a quantitative basis, including diverse metabolic strategies of cells in various environments (Bagamery et al., 2020; Duraj et al., 2021; Escalante-Chong et al., 2015; Hensley et al., 2016; Liu et al., 2015; Solopova et al., 2014; Wang et al., 2019).
