manuscripts/elife-94586/v2/manuscript.md
# Overflow metabolism originates from growth optimization and cell heterogeneity

## Authors

- Xin Wang<sup>1</sup> ([ORCID: 0000-0001-6479-395X](https://orcid.org/0000-0001-6479-395X)) †

### Affiliations

1. https://ror.org/0064kty71 School of Physics, Sun Yat-sen University Guangzhou China

† Corresponding author

## Abstract

A classic problem in metabolism is that fast-proliferating cells use seemingly wasteful fermentation for energy biogenesis in the presence of sufficient oxygen. This counterintuitive phenomenon, known as overflow metabolism or the Warburg effect, is universal across various organisms. Despite extensive research, its origin and function remain unclear. Here, we show that overflow metabolism can be understood through growth optimization combined with cell heterogeneity. A model of optimal protein allocation, coupled with heterogeneity in enzyme catalytic rates among cells, quantitatively explains why and how cells choose between respiration and fermentation under different nutrient conditions. Our model quantitatively illustrates the growth rate dependence of fermentation flux and enzyme allocation under various perturbations and is fully validated by experimental results in Escherichia coli . Our work provides a quantitative explanation for the Crabtree effect in yeast and the Warburg effect in cancer cells and can be broadly used to address heterogeneity-related challenges in metabolism.

## Introduction

A prominent feature of cancer metabolism is that tumor cells excrete large quantities of fermentation products in the presence of sufficient oxygen (Hanahan and Weinberg, 2011; Liberti and Locasale, 2016; Vander Heiden et al., 2009). This process, discovered by Otto Warburg in the 1920s (Warburg, 1924) and known as the Warburg effect, aerobic glycolysis, or overflow metabolism (Basan et al., 2015; Hanahan and Weinberg, 2011; Liberti and Locasale, 2016; Vander Heiden et al., 2009), is ubiquitous among fast-proliferating cells across a broad spectrum of organisms (Vander Heiden et al., 2009), ranging from bacteria (Basan et al., 2015; Holms, 1996; Meyer et al., 1984; Nanchen et al., 2006; Neidhardt et al., 1990) and fungi (De Deken, 1966) to mammalian cells (Hanahan and Weinberg, 2011; Liberti and Locasale, 2016; Vander Heiden et al., 2009). For microbes, cells use standard respiration when nutrients are scarce, while they use the counterintuitive aerobic glycolysis when nutrients are adequate, just analogous to normal tissues and cancer cells, respectively (Vander Heiden et al., 2009).

Over the past century, and particularly through extensive studies in the last two decades (Liberti and Locasale, 2016), various rationales for overflow metabolism have been proposed (Basan et al., 2015; Chen and Nielsen, 2019; Majewski and Domach, 1990; Molenaar et al., 2009; Niebel et al., 2019; Peebo et al., 2015; Pfeiffer et al., 2001; Shlomi et al., 2011; Vander Heiden et al., 2009; Varma and Palsson, 1994; Vazquez et al., 2010; Vazquez and Oltvai, 2016; Zhuang et al., 2011). Notably, Basan et al., 2015 provided a systematic characterization of this process, including various types of experimental perturbations. Currently, prevalent explanations (Basan et al., 2015; Chen and Nielsen, 2019) hold that overflow metabolism arises from the proteome efficiency in fermentation being consistently higher than that in respiration. However, recent studies have shown that the measured proteome efficiency in respiration is actually higher than in fermentation for many yeast and cancer cells (Shen et al., 2024), even though these cells generate fermentation products through aerobic glycolysis. This finding (Shen et al., 2024) apparently contradicts the prevalent explanations (Basan et al., 2015; Chen and Nielsen, 2019). Furthermore, most explanations (Basan et al., 2015; Chen and Nielsen, 2019; Majewski and Domach, 1990; Shlomi et al., 2011; Varma and Palsson, 1994; Vazquez et al., 2010; Vazquez and Oltvai, 2016; Zhuang et al., 2011) rely on the assumption that cells optimize their growth rate for a given rate of carbon influx (i.e. nutrient uptake rate) under each nutrient condition (or its equivalents). However, this assumption remains open to further scrutiny, as the given factors in a nutrient condition are the identities and concentrations of the carbon sources (Molenaar et al., 2009; Scott et al., 2010; Wang et al., 2019), rather than the carbon influx. Therefore, the origin and function of overflow metabolism still remain unclear (DeBerardinis and Chandel, 2020; Hanahan and Weinberg, 2011; Liberti and Locasale, 2016; Vander Heiden et al., 2009).

Why have microbes and cancer cells evolved to possess the seemingly wasteful strategy of aerobic glycolysis? For unicellular organisms, there is evolutionary pressure (Vander Heiden et al., 2009) to optimize cellular resources for rapid growth (Dekel and Alon, 2005; Edwards et al., 2001; Hui et al., 2015; Li et al., 2018; Scott et al., 2010; Towbin et al., 2017; Wang et al., 2019; You et al., 2013). In particular, it has been shown that cells allocate protein resources for optimal growth (Hui et al., 2015; Scott et al., 2010; Wang et al., 2019; You et al., 2013), and the most efficient protein allocation corresponds to elementary flux mode (Müller et al., 2014; Wortel et al., 2014). For cancer cells, disrupting the growth control system and evading immune destruction from the host are prominent hallmarks of their survival (Hanahan and Weinberg, 2011), which in certain ways mimic the evolutionary pressure on microbes to optimize cell growth rate. In this study, we apply the optimal growth principle of microbes, which also roughly holds for cancer cells, to a heterogeneous framework to address the puzzle of aerobic glycolysis. We use Escherichia coli as a typical example to show that overflow metabolism can be understood from optimal protein allocation combined with heterogeneity in enzyme catalytic rates. The optimal growth strategy varies between respiration and fermentation depending on the concentration and type of the nutrient, and the combination with cell heterogeneity results in the standard picture (Basan et al., 2015; Holms, 1996; Meyer et al., 1984; Nanchen et al., 2006; van Hoek et al., 1998) of overflow metabolism. Our model quantitatively illustrates the growth rate dependence of fermentation/respiration flux and enzyme allocation under various types of perturbations in E. coli. Furthermore, it provides a quantitative explanation for the data on the Crabtree effect in yeast and the Warburg effect in cancer cells (Bartman et al., 2023; Shen et al., 2024).

## Results

## Coarse-grained model

Based on the topology of the metabolic network (Neidhardt et al., 1990; Nelson and Cox, 2008) (see Figure 1A), we classify the carbon sources that enter from the upper part of glycolysis into Group A (Wang et al., 2019) and the precursors of biomass components (such as amino acids) into five pools. Specifically, each pool is designated according to its entry point (see Figure 1A and Appendix 2.2 for details): a1 (entry point: G6P/F6P), a2 (entry point: GA3P/3PG/PEP), b (entry point: pyruvate/acetyl-CoA), c (entry point: α\begin{document}$ \displaystyle \alpha$\end{document}-ketoglutarate), and d (entry point: oxaloacetate). Pools a1 and a2 are also combined as Pool a due to the joint synthesis of precursors. Then, the metabolic network for Group A carbon source utilization (see Figure 1A) can be coarse-grained into a model shown in Figure 1B (see Appendix 3.1 for details), where node A\begin{document}$ \displaystyle A$\end{document} represents an arbitrary carbon source of Group A. Evidently, Figure 1B is topologically identical to Figure 1A. Each coarse-grained arrow in Figure 1B represents a stoichiometric flux Ji\begin{document}$ \displaystyle J_{i}$\end{document}, which delivers carbon flux and may be accompanied by energy consumption or biogenesis (e.g. J1\begin{document}$ \displaystyle J_{1}$\end{document}, Ja1\begin{document}$ \displaystyle J_{a1}$\end{document}; see Figure 1A–B and Appendix 1—figure 1A).

![Figure 1.](https://cdn.elifesciences.org/articles/94586/elife-94586-fig1-v2.jpg)

**Figure 1.:** E. coli.(A) The central metabolic network of carbon source utilization. The Group A carbon sources (Wang et al., 2019) are labeled with green squares. (B) Coarse-grained model for Group A carbon source utilization. (C) Model predictions (see Equations S47 and S160) and experimental results (Basan et al., 2015; Holms, 1996) of overflow metabolism, covering the data for all the Group A carbon sources shown in (A). (D) Growth rate dependence of respiration and fermentation fluxes (see Equations S47 and S160). (E) The proteome efficiencies for energy biogenesis in the respiration and fermentation pathways vary with growth rate as functions of the nutrient quality of a Group A carbon source (see Equations S31 and S36). See Appendices 9 and 11 for model parameter settings and experimental data sources (Basan et al., 2015; Holms, 1996; Hui et al., 2015) for Figures 1—4 of E. coli.

In fact, the stoichiometric flux Ji\begin{document}$ \displaystyle J_{i}$\end{document} scales with the cell population. For comparison with experiments, we define the normalized flux Ji(N)≡Ji⋅m0/m0McarbonMcarbon\begin{document}$ J_{i}^{\left({\rm{N}}\right)}\equiv{J_{i}}\cdot{{{m_{\rm{0}}}}\mathord{\left/{ \vphantom{{{m_{\rm{0}}}}{{M_{{\rm{carbon}}}}}}}\right.\kern-1.2pt}{{M_{{\rm{ carbon}}}}}}$\end{document}, which can be regarded as the flux per unit of biomass (the superscript ‘(N)’ stands for normalized; see Appendix 2.3–2.4 for details). Here, Mcarbon\begin{document}$M_{{\rm{carbon}}}$\end{document} represents the carbon mass of the cell population, and m0\begin{document}$ \displaystyle m_{0}$\end{document} is the weighted average carbon mass of metabolite molecules at the entry of precursor pools (see Equation S17). Then, the cell growth rate λ\begin{document}$ \displaystyle \lambda$\end{document} can be represented by the total outflow of the normalized fluxes: λ=∑ia1,a2,b,c,dJi(N)\begin{document}$\lambda=\sum\limits_{i}^{a1,a2,b,c,d}{J_{i}^{\left({\rm{N}}\right)}}$\end{document} (see Appendix 2.4). The normalized fluxes of respiration and fermentation are Jr(N)≡J4(N)\begin{document}$J_{r}^{\left({\rm{N}}\right)}\equiv J_{4}^{\left({\rm{N}}\right)}$\end{document} and Jf(N)≡J6(N)\begin{document}$J_{f}^{\left({\rm{N}}\right)}\equiv J_{6}^{\left({\rm{N}}\right)}$\end{document}, respectively (see Figure 1A and B). In practice, each Ji(N)\begin{document}$ \displaystyle J_{i}^{\left({\rm{N}}\right)}$\end{document} is characterized by two quantities: the proteomic mass fraction ϕi\begin{document}$ \displaystyle \phi_{i}$\end{document} of the enzyme dedicated to carrying the flux and the substrate quality κi\begin{document}$ \displaystyle \kappa_{i}$\end{document}, such that Ji(N)=ϕi⋅κi\begin{document}$ \displaystyle J_{i}^{\left({\rm{N}}\right)}={\phi_{i}}\cdot{\kappa_{i}}$\end{document}. We take the Michaelis-Menten form for the enzyme kinetics (Nelson and Cox, 2008), and then κi≡ki⋅[Si][Si]+Ki\begin{document}${\kappa_{i}}\equiv{k_{i}}\cdot\frac{{[{S_{i}}]}}{{[{S_{i}}]+{K_{i}}}}$\end{document} (see Equation S12 and Appendix 2.4 for details), where [Si]\begin{document}$ \displaystyle \left[{{S_{i}}}\right]$\end{document} is the concentration of substrate Si\begin{document}$ \displaystyle S_{i}$\end{document}, and Ki\begin{document}$ \displaystyle K_{i}$\end{document} is the Michaelis constant. For each intermediate node and reaction along the pathway (e.g. node M1\begin{document}$ \displaystyle M_{1}$\end{document} in Ja1\begin{document}$ \displaystyle J_{a1}$\end{document}), the substrate quality κi\begin{document}$ \displaystyle \kappa_{i}$\end{document} can be approximated as a constant (see Appendix 2.5): κi≡ki⋅[Si][Si]+Ki≈ki\begin{document}$\kappa_{i}}\equiv{k_{i}}\cdot\frac{{[{S_{i}}]}}{{[{S_{i}}]+{K_{i}}}}\approx{k _{i}$\end{document}, where [Si]≥Ki\begin{document}$ \displaystyle [{S_{i}}]\geq{K_{i}}$\end{document} generally holds true in bacteria (Bennett et al., 2009; Park et al., 2016). However, the nutrient quality κA\begin{document}$ \displaystyle \kappa_{A}$\end{document} is a variable that depends on the nutrient type and concentration of a Group A carbon source (see Equation S27).

Generally, there are three independent fates for a Group A carbon source in the metabolic network (Chen and Nielsen, 2019): fermentation, respiration, and biomass generation (see Appendix 1—figure 1C-E). Each draws a distinct proteome fraction of ϕf\begin{document}$ \displaystyle \phi_{f}$\end{document}, ϕr\begin{document}$ \displaystyle \phi_{r}$\end{document} and ϕBM\begin{document}$ \displaystyle \phi_{{\rm{BM}}}$\end{document}, with no overlap between them (see Appendix 3.1). The net effect of the first two fates is energy biogenesis, while the last one generates precursors for biomass, accompanied by energy biogenesis. By applying the proteomic constraint that there is a maximum fraction, ϕmax\begin{document}$ \displaystyle \phi_{\max}$\end{document}, for proteome allocation: ϕmax≈0.48\begin{document}$ \displaystyle {\phi_{\max}}\approx 0.48$\end{document} (Scott et al., 2010), we have:(1)ϕf+ϕr+ϕBM=ϕmax.\begin{document}$${\phi _f} + {\phi _r} + {\phi _{{\rm{BM}}}} = {\phi _{\max }}.$$\end{document}

In fact, Equation 1 is equivalent to ϕR+ϕA+∑j=16ϕj+∑ia1,a2,b,c,dϕi=ϕmax\begin{document}$\phi_{\text{R}}}+{\phi_{A}}+\sum\limits_{j=1}^{6}{{\phi_{j}}}+\sum\limits_{i}^{ a1,a2,b,c,d}{{\phi_{i}}}={\phi_{\max}$\end{document} (see Appendix 3.1 for derivation details), where ϕR\begin{document}$ \displaystyle \phi_{\rm R}$\end{document} and ϕA\begin{document}$ \displaystyle \phi_{A}$\end{document} represent the proteomic mass fractions of the active ribosome-affiliated proteins and the cargo proteins responsible for the uptake of the Group A carbon source, respectively. During cell proliferation, ribosomes serve as the factories for protein synthesis and are primarily composed of proteins (Neidhardt et al., 1990; Nelson and Cox, 2008), while other biomass components, such as RNA, are optimally produced (Kostinski and Reuveni, 2020) in accordance with the growth rate determined by protein synthesis. Thus, the cell growth rate is proportional to ϕR: λ=ϕR⋅κt\begin{document}$\phi_{\rm R}\text{: }\lambda = {\phi _{\rm{R}}} \cdot {\kappa _{\rm{t}}}$\end{document}, where κt\begin{document}$ \displaystyle \kappa_{\rm t}$\end{document} is a parameter set by the translation rate (Scott et al., 2010) (see Appendix 2.1 for details), which can be approximated as a constant within the growth rate range of interest (Dai et al., 2017).

For balanced cell growth in bacteria, the energy demand JE\begin{document}$ \displaystyle J_{\rm{E}}$\end{document}, expressed as the stoichiometric energy flux in ATP, is generally proportional to the biomass production rate (Ebenhöh et al., 2024), since the proportion of maintenance energy is roughly negligible (Locasale and Cantley, 2010) (see Appendix 10 for the cases of yeast and tumor cells). Thus, the normalized flux of energy demand in ATP, denoted as JE(N)\begin{document}$J_{\rm{E}}^{\left({\text{N}}\right)}$\end{document}, representing the energy demand per unit of biomass, is proportional to the growth rate λ\begin{document}$ \displaystyle \lambda$\end{document} (see Appendix 3.1 for details):(2)JE(N)=ηE⋅λ,\begin{document}$$J_{\rm{E}}^{\left({\rm{N}} \right)} = {\eta _{\rm{E}}} \cdot \lambda,$$\end{document}

where ηE\begin{document}$ \displaystyle {\eta_{\rm{E}}}$\end{document} is an energy coefficient (see Equations S25 and S26 for details). By converting all energy currencies (such as NADH, FADH2, etc.) into ATP, the normalized energy fluxes for respiration and fermentation are given by Jr(E)=βr(A)⋅Jr(N)/2\begin{document}$J_{r}^{\left({\text{E}}\right)}={\beta_{r}^{\left(A\right)}\cdot J_{r}^{\left({ \text{N}}\right)}} \big/ 2$\end{document} and Jf(E)=βf(A)⋅Jf(N)/2\begin{document}$J_{f}^{\left({\text{E}}\right)}={\beta_{f}^{\left(A\right)}\cdot J_{f}^{\left({ \text{N}}\right)}} \big/2$\end{document}, where βr(A)\begin{document}$ \displaystyle \beta_{r}^{\left(A\right)}$\end{document} and βf(A)\begin{document}$ \displaystyle \beta_{f}^{\left(A\right)}$\end{document} are the stoichiometric coefficients of ATP production per glucose in each pathway (see Appendix 1—figure 1C-E and Appendix 3.1 for details). The denominator coefficient of ‘2’ is derived from the stoichiometry of the coarse-grained reaction M1→2M2\begin{document}$ \displaystyle {M_{1}}\to 2{M_{2}}$\end{document} (see Figure 1A and B). Applying the criteria of flux balance (i.e. mass conservation; see Appendix 2.3) at each intermediate node (Mi\begin{document}$ \displaystyle M_{i}$\end{document}, i\begin{document}$ \displaystyle i$\end{document} = 1, …, 5) and precursor pool (Pool i\begin{document}$ \displaystyle i$\end{document}, i=\begin{document}$ \displaystyle i=$\end{document} a1, a2, b, c, d), along with the constraints of proteome allocation (see Equation 1) and energy demand (see Equation 2), we obtain the relations between normalized energy fluxes and growth rate for a given nutrient condition with a fixed κA\begin{document}$ \displaystyle \kappa_{A}$\end{document} (see Appendix 3.1 for details):(3){Jr(E)+Jf(E)=φ⋅λ,Jr(E)εr+Jf(E)εf=ϕmax−ψ⋅λ,\begin{document}$$\left\{\begin{array}{ll}\displaystyle J_{r}^{\left (\text{E}\right)}+J_{f}^{\left (\text{E}\right)} = \varphi \cdot \lambda ,\\ \displaystyle \frac{{J_{r}^{\left (\text{E}\right)}}}{{{\varepsilon _r}}} + \frac{{J_{f}^{\left (\text{E}\right)}}}{{{\varepsilon _f}}} = {\phi _{\max }} - \psi \cdot \lambda , \end{array}\right.$$\end{document}

where φ\begin{document}$ \displaystyle \varphi$\end{document} is a constant coefficient primarily determined by the coefficient ηE\begin{document}$ \displaystyle {\eta_{\rm{E}}}$\end{document} (see Equation S33), and φ⋅λ\begin{document}$ \displaystyle \varphi\cdot\lambda$\end{document} represents the normalized flux of energy demand, excluding energy biogenesis from the biomass synthesis pathway. The coefficients ψ\begin{document}$ \displaystyle \psi$\end{document}, εr\begin{document}$ \displaystyle \varepsilon_{r}$\end{document}, and εf\begin{document}$ \displaystyle \varepsilon_{f}$\end{document} are functions of κA\begin{document}$ \displaystyle \kappa_{A}$\end{document}, such that their values are highly dependent on nutrient conditions. ψ−1\begin{document}$ \displaystyle \psi^{-1}$\end{document} denotes the proteome efficiency for biomass generation in the biomass synthesis pathway (see Equation S32), defined as ψ−1≡λ/ϕBM\begin{document}$\psi^{-1} \equiv \lambda \big/ \phi_{\text{BM}}$\end{document} (see Appendix 3.1). εr\begin{document}$ \displaystyle \varepsilon_{r}$\end{document} and εf\begin{document}$ \displaystyle \varepsilon_{f}$\end{document} represent the proteome efficiencies for energy biogenesis in the respiration and fermentation pathways, respectively, defined as the normalized energy fluxes expressed in ATP generated per proteomic mass fraction, with εr≡Jr(E)/ϕr\begin{document}$\varepsilon_{r}\equiv J_{r}^{\left({\text{E}}\right)} \big/ \phi_{r}$\end{document} and εf≡Jf(E)/ϕf\begin{document}$\varepsilon_{f} \equiv J_{f}^{\left({\text{E}}\right)} \big/ \phi_{f}$\end{document}. Hence,(4){εr=βr(A)1/κA+1/κr(A),εf=βf(A)1/κA+1/κf(A),\begin{document}$$\left\{\begin{array}{ll}\varepsilon_{r}= \displaystyle \frac{\beta_{r}^{\left(A\right)}}{1 \big/\kappa_A + 1 \big/ \kappa_r^{\left( A \right)}},\\\varepsilon_{f}= \displaystyle \frac{{\beta_{f}^{(A)}}}{1 \big/\kappa_A + 1 \big/ {\kappa_{f}^{(A)}}},\end{array}\right.$$\end{document}

where both κr(A)\begin{document}$\kappa_{r}^{(A)}$\end{document} and κf(A)\begin{document}$\kappa_{f}^{(A)}$\end{document} are composite parameters that can be approximated as constants, with 1/κr(A)≡1/κ1+2/κ2+2/κ3+2/κ4\begin{document}$1 \big/ \kappa_r^{(A)} \equiv 1\big/ \kappa_1 + 2 \big/ \kappa_2 + 2 \big/ \kappa_3 + 2\big/ \kappa_4$\end{document} and 1/κf(A)≡1/κ1+2/κ2+2/κ6\begin{document}$1 \big/ \kappa_{f}^{(A)} \equiv 1\big/ \kappa_1 + 2 \big/ \kappa_2 + 2 \big/ \kappa_6$\end{document} (see Appendices 2.5 and 3.1 for details).

## Origin of overflow metabolism

The standard picture of overflow metabolism (Basan et al., 2015; Holms, 1996; Meyer et al., 1984; Nanchen et al., 2006; van Hoek et al., 1998) is exemplified by the experimental data (Basan et al., 2015) presented in Figure 1C, where the fermentation flux exhibits a threshold-analog dependence on the growth rate λ\begin{document}$ \displaystyle \lambda$\end{document}. It is well established that respiration is significantly more efficient than fermentation in terms of energy biogenesis per unit of carbon (i.e. βr(A)>βf(A)\begin{document}$ \displaystyle \beta_{r}^{\left(A\right)} \gt \beta_{f}^{\left(A\right)}$\end{document}) (Nelson and Cox, 2008; Vander Heiden et al., 2009). Then, why do cells bother to use the seemingly wasteful fermentation pathway? We proceed to address this issue by applying optimal protein allocation (Scott et al., 2010; Wang et al., 2019) within the framework of optimal growth.

For cell proliferation in a given nutrient condition (i.e. with a fixed κA\begin{document}$ \displaystyle \kappa_{A}$\end{document}), the values of εr\begin{document}$ \displaystyle \varepsilon_{r}$\end{document}, εf\begin{document}$ \displaystyle \varepsilon_{f}$\end{document}, and ψ\begin{document}$ \displaystyle \psi$\end{document} are determined (see Equations 4 and S32). However, the growth rate λ\begin{document}$ \displaystyle \lambda$\end{document} can be influenced by protein allocation between respiration and fermentation, specifically ϕr\begin{document}$ \displaystyle \phi_{r}$\end{document} and ϕf\begin{document}$ \displaystyle \phi_{f}$\end{document}, according to the governing equation (Equation 3). If εr>εf\begin{document}$ \displaystyle {\varepsilon_{r}} \gt {\varepsilon_{f}}$\end{document}, that is, if the proteome efficiency in respiration is higher than that in fermentation, then λ=ϕmax−Jf(E)(1/εf−1/εr)ψ+φ/εr≤ϕmaxψ+φ/εr\begin{document}$\lambda=\frac{{\phi_{\max}}-J_{f}^{\left({\text{E}}\right)}\left(1 \big/ \varepsilon_{f} - 1 \big/ \varepsilon_{r}\right)}{\psi+ \varphi \big/ \varepsilon_{r}}\leq\frac{{{\phi_{ \max}}}}{\psi+\varphi \big/ \varepsilon_{r}}$\end{document}. The optimal growth strategy is ϕf=Jf(E)=0\begin{document}$ \displaystyle {\phi_{f}}=J_{f}^{\left({\rm{E}}\right)}=0$\end{document}, meaning that the cell exclusively uses respiration. Conversely, if εf>εr\begin{document}$ \displaystyle {\varepsilon_{f}} \gt {\varepsilon_{r}}$\end{document}, then ϕr=Jr(E)=0\begin{document}$ \displaystyle {\phi_{r}}=J_{r}^{\left({\rm{E}}\right)}=0$\end{document} is optimal, and the cell solely uses fermentation. In either case, the choice between respiration and fermentation for growth optimization is determined by comparing their proteome efficiencies.

In practice, both proteome efficiencies εr\begin{document}$ \displaystyle \varepsilon_{r}$\end{document} and εf\begin{document}$ \displaystyle \varepsilon_{f}$\end{document} are functions of nutrient quality κA\begin{document}$ \displaystyle \kappa_{A}$\end{document}, which can be significantly influenced by the nutrient type and concentration of the carbon source (see Equations 4 and S27). Therefore, the optimal growth strategy may vary depending on the nutrient conditions. In nutrient-poor conditions where κA≪κr(A)\begin{document}$ \displaystyle {\kappa_{A}}\ll\kappa_{r}^{\left(A\right)}$\end{document} and κA≪κf(A)\begin{document}$ \displaystyle {\kappa_{A}}\ll\kappa_{f}^{\left(A\right)}$\end{document}, the proteome efficiencies can be approximated by εr≈βr(A)⋅κA\begin{document}$ \displaystyle {\varepsilon_{r}}\approx\beta_{r}^{\left(A\right)}\cdot{\kappa_{A}}$\end{document} and εf≈βf(A)⋅κA\begin{document}$ \displaystyle {\varepsilon_{f}}\approx\beta_{f}^{\left(A\right)}\cdot{\kappa_{A}}$\end{document} (see Equation 4), and hence εr(κA)>εf(κA)\begin{document}$ \displaystyle {\varepsilon_{r}}\left({{\kappa_{A}}}\right) \gt {\varepsilon_{f}}\left({{\kappa_{ A}}}\right)$\end{document} (since βr(A)>βf(A)\begin{document}$ \displaystyle \beta_{r}^{\left(A\right)} \gt \beta_{f}^{\left(A\right)}$\end{document}), meaning that the proteome efficiency of respiration is higher than that of fermentation under these conditions. In contrast, in rich media, using parameters for κi\begin{document}$ \displaystyle \kappa_{i}$\end{document} derived from in vivo/in vitro experimental data for E. coli (see Appendix 1—table 1, Appendix 1—table 2 and Appendix 7.1–7.2), we obtain εr(κglucose(ST))<εf(κglucose(ST))\begin{document}$ \displaystyle {\varepsilon_{r}}\left({\kappa_{{\rm{glucose}}}^{\left({{\rm{ST}}}\right)}} \right) \lt {\varepsilon_{f}}\left({\kappa_{{\rm{glucose}}}^{\left({{\rm{ST}}} \right)}}\right)$\end{document} with Equation 4 (see also Equations S39-S40), where κglucose(ST)\begin{document}$ \displaystyle \kappa_{{\rm{glucose}}}^{\left({{\rm{ST}}}\right)}$\end{document} represents the substrate quality of glucose at saturated concentration (abbreviated as ‘ST’ in the superscript). This indicates that the proteome efficiency in fermentation is higher than that in respiration for bacteria in rich media. Indeed, recent studies have validated that the measured proteome efficiency in fermentation is higher than in respiration for E. coli in lactose at saturated concentration (Basan et al., 2015), i.e., εr(κlactose(ST))<εf(κlactose(ST))\begin{document}$ \displaystyle {\varepsilon_{r}}\left({\kappa_{{\rm{lactose}}}^{\left({{\rm{ST}}}\right)}} \right) \lt {\varepsilon_{f}}\left({\kappa_{{\rm{lactose}}}^{\left({{\rm{ST}}} \right)}}\right)$\end{document}. In Figure 1E, we present the growth rate dependence of proteome efficiencies εr\begin{document}$ \displaystyle \varepsilon_{r}$\end{document} and εf\begin{document}$ \displaystyle \varepsilon_{f}$\end{document} in a three-dimensional (3D) format using the collected data shown in Appendix 1—table 1, where εr\begin{document}$ \displaystyle \varepsilon_{r}$\end{document}, εf\begin{document}$ \displaystyle \varepsilon_{f}$\end{document} and the growth rate λ\begin{document}$ \displaystyle \lambda$\end{document} all vary as functions of nutrient quality κA\begin{document}$ \displaystyle \kappa_{A}$\end{document}. Furthermore, the ratio Δ\begin{document}$ \displaystyle \Delta$\end{document} (defined as Δ(κA)≡εf(κA)/εr(κA)\begin{document}$\Delta\left(\kappa_{A}\right)\equiv \varepsilon_{f} \left(\kappa_{A} \right) \big/ \varepsilon_{r}\left(\kappa_{A}\right)$\end{document}) is a monotonically increasing function of κA\begin{document}$ \displaystyle \kappa_{A}$\end{document}, and there exists a critical value of κA\begin{document}$ \displaystyle \kappa_{A}$\end{document} (denoted as κA(C)\begin{document}$ \displaystyle \kappa_{A}^{\left({\rm{C}}\right)}$\end{document}; see Appendix 3.2 for details) satisfying Δ(κA(C))=1\begin{document}$ \displaystyle \Delta\left({\kappa_{A}^{\left({\rm{C}}\right)}}\right)=1$\end{document}. Below κA(C)\begin{document}$ \displaystyle \kappa_{A}^{\left({\rm{C}}\right)}$\end{document}, where the nutrient is poorer and the cell grows slowly, the proteome efficiency of fermentation is lower than that of respiration (i.e. εf<εr\begin{document}$ \displaystyle {\varepsilon_{f}} \lt {\varepsilon_{r}}$\end{document}), hence respiration is the optimal choice (with λ=ϕmax⋅(ψ+φ/εr)−1\begin{document}$\lambda=\phi_{\max} \cdot \left(\psi+\varphi\big/ \varepsilon_{r} \right)^{- 1}$\end{document}). Above κA(C)\begin{document}$ \displaystyle \kappa_{A}^{\left({\rm{C}}\right)}$\end{document}, where the nutrient is richer and the cell grows faster, fermentation is more efficient than respiration in terms of proteome efficiency (i.e. εf>εr\begin{document}$ \displaystyle {\varepsilon_{f}} \gt {\varepsilon_{r}}$\end{document}) and becomes the optimal growth strategy (with λ=ϕmax⋅(ψ+φ/εf)−1\begin{document}$\lambda=\phi_{\max} \cdot \left(\psi+\varphi\big/ \varepsilon_{f} \right)^{- 1}$\end{document}). This analysis qualitatively explains the phenomenon of aerobic glycolysis.

For a quantitative understanding of overflow metabolism, let us first consider the homogeneous case, where all cells share identical biochemical parameters. For optimal protein allocation, the relation between fermentation flux and growth rate under nutrient variation (with significantly varying κA\begin{document}$ \displaystyle \kappa_{A}$\end{document}) is given by Jf(E)=φ⋅λ⋅θ(λ−λC)\begin{document}$ \displaystyle J_{f}^{\left({\rm{E}}\right)}=\varphi\cdot\lambda\cdot\theta\left({\lambda-{ \lambda_{\rm{C}}}}\right)$\end{document}, where ‘θ\begin{document}$ \displaystyle \theta$\end{document}’ represents the Heaviside step function, and λC\begin{document}$ \displaystyle \lambda_{\rm{C}}$\end{document} denotes the critical growth rate corresponding to the nutrient condition with nutrient quality κA(C)\begin{document}$ \displaystyle \kappa_{A}^{\left({\rm{C}}\right)}$\end{document} (i.e.  λC≡λ(κA(C))\begin{document}$ \displaystyle {\lambda_{\rm{C}}}\equiv\lambda\left({\kappa_{A}^{\left({\rm{C}}\right)}}\right)$\end{document}). Similarly, the growth rate dependence of respiration flux is Jr(E)=φ⋅λ⋅[1−θ(λ−λC)]\begin{document}$ \displaystyle J_{r}^{\left({\rm{E}}\right)}=\varphi\cdot\lambda\cdot\left[{1-\theta\left({ \lambda-{\lambda_{\rm{C}}}}\right)}\right]$\end{document}. These digital response outcomes are consistent with the numerical simulation findings of Molenaar et al., 2009. However, they are clearly incompatible with the threshold-analog response observed in the standard picture of overflow metabolism (Basan et al., 2015; Holms, 1996; Meyer et al., 1984; Nanchen et al., 2006; van Hoek et al., 1998).

To address this issue, we take into account cell heterogeneity, which is ubiquitous in both microbes (Ackermann, 2015; Bagamery et al., 2020; Balaban et al., 2004; Nikolic et al., 2013; Solopova et al., 2014; Wallden et al., 2016; Yaginuma et al., 2014; Zhang et al., 2018) and tumor cells (Duraj et al., 2021; Shibao et al., 2018; Hanahan and Weinberg, 2011; Hensley et al., 2016). In the context of the Warburg effect or overflow metabolism, experimental studies have reported significant metabolic heterogeneity in the choice between respiration and fermentation within a cell population (Bagamery et al., 2020; Duraj et al., 2021; Shibao et al., 2018; Hensley et al., 2016; Nikolic et al., 2013). Motivated by the observation that the turnover number (kcat\begin{document}$ \displaystyle k_\rm{cat}$\end{document} value) of a catalytic enzyme varies considerably between in vitro and in vivo measurements (Davidi et al., 2016; García-Contreras et al., 2012), we note that the concentrations of potassium and phosphate, which vary from cell to cell, have a significant impact on the kcat\begin{document}$ \displaystyle k_\rm{cat}$\end{document} values of metabolic enzymes (García-Contreras et al., 2012). Therefore, within a cell population, there is a distribution of kcat\begin{document}$ \displaystyle k_\rm{cat}$\end{document} values for a catalytic enzyme, commonly referred to as extrinsic noise (Elowitz et al., 2002). For simplicity, we assume that the kcat\begin{document}$ \displaystyle k_\rm{cat}$\end{document} values for each enzyme follow a Gaussian distribution. Consequently, the proteome efficiencies εr\begin{document}$ \displaystyle \varepsilon_{r}$\end{document} and εf\begin{document}$ \displaystyle \varepsilon_{f}$\end{document}, which are crucial for determining the choice between respiration and fermentation, also follow Gaussian distributions (see Appendix 8 for details). This variability leads to diverse distributions of single-cell growth rates across different carbon sources (see Equations S155-S157 and S163-S165), which has been fully verified by recent experiments using isogenic E. coli at single-cell resolution (Wallden et al., 2016; see Appendix 1—figure 2B). Accordingly, the critical growth rate λC\begin{document}$ \displaystyle \lambda_{\rm{C}}$\end{document} is expected to follow a Gaussian distribution N(μλC,σλC2)\begin{document}$ \displaystyle {\cal N}\left({{\mu_{{\lambda_{\rm{C}}}}},\sigma_{{\lambda_{\rm{C}}}}^{2}}\right)$\end{document} within a cell population (see Appendix 8 for details), where μλC\begin{document}$ \displaystyle {\mu_{{\lambda_{\rm{C}}}}}$\end{document} is approximated by the deterministic result of λC\begin{document}$ \displaystyle \lambda_{\rm{C}}$\end{document} (Equation S43). Assuming the coefficient of variation (CV) of λC\begin{document}$ \displaystyle \lambda_{\rm{C}}$\end{document} is σλC/μC=12%\begin{document}$\sigma_{\lambda_{\text{C}}} \big/ \mu_{\text{C}} =12\%$\end{document}, or equivalently that the CV for the catalytic rate of each metabolic enzyme is 25%, we derive the growth rate dependence of fermentation and respiration fluxes (see Appendix 3.3 for details):(5){Jf(N)(λ)=φ⋅λβf(A)⋅[erf(λ−μλC2σλC)+1],Jr(N)(λ)=φ⋅λβr(A)⋅[1−erf(λ−μλC2σλC)],\begin{document}$$\begin{cases} J_{f}^{\left({ \text{N}}\right)} \left(\lambda \right) = \displaystyle \frac{{\varphi \cdot \lambda }}{{\beta_{f}^{\left(A \right)}}} \cdot \left[ {{\text{erf}}\left({\frac{{\lambda - {\mu _{{\lambda _{\text{C}}}}}}}{{\sqrt 2 {\sigma _{{\lambda _{\text{C}}}}}}}} \right) + 1} \right],\\[1pt] J_r^{\left({\text{N}} \right)}\left(\lambda \right) = \displaystyle \frac{{\varphi \cdot \lambda }}{{\beta _r^{\left(A \right)}}} \cdot \left[ {1 - {\text{erf}}\left({\frac{{\lambda - {\mu _{{\lambda _{\text{C}}}}}}}{{\sqrt 2 {\sigma _{{\lambda _{\text{C}}}}}}}} \right)} \right], \end{cases}$$\end{document}

where ‘erf’ represents the error function. The fermentation flux exhibits a threshold-analog relation with the growth rate (the red curves in Figures 1C–D—3B, D and F), while the respiration flux (the blue curve in Figure 1D) decreases as the fermentation flux increases. In Figure 1C–D, we observe that the model results (see Equation 5 and Appendix 9 for details; parameters are set based on the experimental data shown in Appendix 1—table 1) quantitatively agree with the experimental data from E. coli (Basan et al., 2015; Holms, 1996). The fermentation flux is represented by the acetate secretion rate Jactate(M)=2Jf(N)\begin{document}$ \displaystyle J_{{\rm{actate}}}^{\left({\rm{M}}\right)}=2J_{f}^{\left({\rm{N}}\right)}$\end{document}, and the respiration flux is exemplified by the carbon dioxide flux JCO2,r(M)=6Jr(N)\begin{document}$ \displaystyle J_{{\rm{C}}{{\rm{O}}_{\rm{2}}},r}^{\left({\rm{M}}\right)}=6J_{r}^{\left({\rm{N }}\right)}$\end{document} (the superscript ‘(M)’ represents the measurable flux in the unit of mM/OD600/h; see Appendix 9.1 for details). By incorporating cell heterogeneity, our model of optimal protein allocation quantitatively explains overflow metabolism.

## Testing the model through perturbations

To further test our model, we systematically investigate its predictions under various types of perturbations and compare them with experimental data from existing studies (Basan et al., 2015; Holms, 1996) (see Appendices 4 and 5.1 for details).

First, we consider the proteomic perturbation caused by overexpression of useless proteins encoded by the lacZ gene (i.e. ϕZ\begin{document}$ \displaystyle \phi_{Z}$\end{document} perturbation) in E. coli. The net effect of the ϕZ\begin{document}$ \displaystyle \phi_{Z}$\end{document} perturbation is that the maximum fraction of the proteome available for resource allocation changes from ϕmax\begin{document}$ \displaystyle \phi_{\max}$\end{document} to ϕmax−ϕZ\begin{document}$ \displaystyle {\phi_{\max}}-{\phi_{Z}}$\end{document} (Basan et al., 2015), where ϕZ\begin{document}$ \displaystyle \phi_{Z}$\end{document} is the proteomic mass fraction of useless proteins. In a cell population, the critical growth rate λC(ϕZ)\begin{document}${\lambda_{\rm{C}}}\left({{\phi_{\rm{Z}}}}\right)$\end{document} still follows a Gaussian distribution N(μλC(ϕZ),σλC(ϕZ)2)\begin{document}$ \displaystyle {\cal N}\left({{\mu_{{\lambda_{\rm{C}}}}}\left({{\phi_{\rm{Z}}}}\right),{ \sigma_{{\lambda_{\rm{C}}}}}{{\left({{\phi_{\rm{Z}}}}\right)}^{2}}}\right)$\end{document}, where the CV of λC(ϕZ)\begin{document}$ \displaystyle {\lambda_{\rm{C}}}\left({{\phi_{\rm{Z}}}}\right)$\end{document} remains unchanged. Consequently, the growth rate dependence of fermentation flux changes to Jf(N)=φ⋅λβf(A)⋅[erf(λ−μλC(ϕZ)2σλC(ϕZ))+1]\begin{document}$J_{f}^{\left({\rm{N}}\right)}=\frac{{\varphi\cdot\lambda}}{{\beta_{f}^{\left(A \right)}}}\cdot\left[{{\rm{erf}}\left({\frac{{\lambda-{\mu_{{\lambda_{\rm{C}}} }}\left({{\phi_{\rm{Z}}}}\right)}}{{\sqrt{2}{\sigma_{{\lambda_{\rm{C}}}}}\left ({{\phi_{\rm{Z}}}}\right)}}}\right)+1}\right]$\end{document} (see Appendix 4 for model perturbation results regarding respiration flux), where both the growth rate λ(κA,ϕZ)\begin{document}$ \displaystyle \lambda\left({{\kappa_{A}},{\phi_{\rm{Z}}}}\right)$\end{document} and the normalized fermentation flux Jf(N)(κA,ϕZ)\begin{document}$ \displaystyle J_{f}^{\left({\rm{N}}\right)}\left({{\kappa_{A}},{\phi_{\rm{Z}}}}\right)$\end{document} are bivariate functions of κA\begin{document}$ \displaystyle \kappa_{A}$\end{document} and ϕZ\begin{document}$ \displaystyle \phi_{Z}$\end{document} (see Equations S49, S56 and S57). For each degree of LacZ expression (with fixed ϕZ\begin{document}$ \displaystyle \phi_{Z}$\end{document}), similar to wild-type strains, the fermentation flux exhibits a threshold-analog response to growth rate as κA\begin{document}$ \displaystyle \kappa_{A}$\end{document} varies (see Figure 2C), which agrees quantitatively with experimental results (Basan et al., 2015). The shifts in the critical growth rate λC(ϕZ)\begin{document}$ \displaystyle {\lambda_{\rm{C}}}\left({{\phi_{\rm{Z}}}}\right)$\end{document} are fully captured by μλC(ϕZ)=μλC(0)(1−ϕZ/ϕZϕmaxϕmax)\begin{document}$ \displaystyle {\mu_{{\lambda_{\rm{C}}}}}\left({{\phi_{\rm{Z}}}}\right)={\mu_{{\lambda_{\rm{C }}}}}\left(0\right)\left({1-{{{\phi_{\rm{Z}}}}\mathord{\left/{\vphantom{{{\phi _{\rm{Z}}}}{{\phi_{\max}}}}}\right.\kern-1.2pt}{{\phi_{\max}}}}}\right)$\end{document}. In contrast, for nutrient conditions with each fixed κA\begin{document}$ \displaystyle \kappa_{A}$\end{document}, since the growth rate changes with ϕZ\begin{document}$ \displaystyle \phi_{Z}$\end{document} just like λC(ϕZ):λ(κA,ϕZ)=λ(κA,0)(1−ϕZ/ϕmax)\begin{document}${\lambda_{\rm{C}}}\left({{\phi_{\rm{Z}}}}\right):\lambda(\kappa_{A},\phi_{Z})=\lambda(\kappa_{A},0)\,\,(1-\phi_{\rm Z}{\big /}\phi_{\rm max})$\end{document}, the fermentation flux is then proportional to the growth rate for the varying levels of LacZ expression: Jf(N)=φβf(A)⋅[erf(λ(κA,0)−μλC(0)2σλC(0))+1]⋅λ\begin{document}$J_{f}^{\left({\rm{N}}\right)}=\frac{\varphi}{{\beta_{f}^{\left(A\right)}}} \cdot\left[{{\rm{erf}}\left({\frac{{\lambda\left({{\kappa_{A}},0}\right)-{\mu_ {{\lambda_{\rm{C}}}}}\left(0\right)}}{{\sqrt{2}{\sigma_{{\lambda_{\rm{C}}}}} \left(0\right)}}}\right)+1}\right]\cdot\lambda$\end{document}, where the slope is a monotonically increasing function of the substrate quality κA\begin{document}$ \displaystyle \kappa_{A}$\end{document}. These scaling relations are well validated by the experimental data (Basan et al., 2015) shown in Figure 2B. Finally, in the case where both κA\begin{document}$ \displaystyle \kappa_{A}$\end{document} and ϕZ\begin{document}$ \displaystyle \phi_{Z}$\end{document} are free to vary, the growth rate dependence of fermentation flux presents a threshold-analog response surface in a 3D plot, where ϕZ\begin{document}$ \displaystyle \phi_{Z}$\end{document} appears explicitly as the y\begin{document}$ \displaystyle y$\end{document}-axis (see Figure 2A). Experimental data points (Basan et al., 2015) lie right on this surface, which is highly consistent with the model predictions.

![Figure 2.](https://cdn.elifesciences.org/articles/94586/elife-94586-fig2-v2.jpg)

**Figure 2.:** E. coli.(A) A 3D plot of the relations among fermentation flux, growth rate, and the expression level of useless proteins. In this plot, both the acetate excretion rate and growth rate vary as bivariate functions of the nutrient quality of a Group A carbon source (denoted as ) and the useless protein expression encoded by κA\begin{document}$ \displaystyle \kappa_{A}$\end{document}lacZ gene (denoted as  perturbation; see ϕZ\begin{document}$ \displaystyle \phi_{Z}$\end{document}Equations S57 and S160). (B) Growth rate dependence of the acetate excretion rate upon  perturbation for each fixed nutrient condition (see ϕZ\begin{document}$ \displaystyle \phi_{Z}$\end{document}Equations S58 and S160). (C) Growth rate dependence of the acetate excretion rate as  varies (see κA\begin{document}$ \displaystyle \kappa_{A}$\end{document}Equations S58 and S160), with each fixed expression level of LacZ.

Next, we study the influence of energy dissipation, which introduces an energy dissipation coefficient w\begin{document}$ \displaystyle w$\end{document} to Equation 2: JE(N)=ηE⋅λ+w\begin{document}$ \displaystyle J_{\rm{E}}^{\left({\rm{N}}\right)}={\eta_{\rm{E}}}\cdot\lambda+w$\end{document}. Similarly, the critical growth rate in this case, λC(w)\begin{document}$ \displaystyle {\lambda_{\rm{C}}}\left(w\right)$\end{document}, follows a Gaussian distribution N(μλC(w),σλC(w)2)\begin{document}$ \displaystyle {\cal N}\left({{\mu_{{\lambda_{\rm{C}}}}}\left(w\right),{\sigma_{{\lambda_{\rm {C}}}}}{{\left(w\right)}^{2}}}\right)$\end{document} in a cell population. The relation between the growth rate and fermentation flux can be characterized by: Jf(N)=φ⋅λ+wβf(A)⋅[erf(λ−μλC(w)2σλC(w)2)+1]\begin{document}$J_{f}^{\left({\rm{N}}\right)}=\frac{{\varphi\cdot\lambda+w}}{{\beta_{f}^{\left (A\right)}}}\cdot\left[{{\rm{erf}}\left({\frac{{\lambda-{\mu_{{\lambda_{\rm{C} }}}}\left(w\right)}}{{\sqrt{2}{\sigma_{{\lambda_{\rm{C}}}}}{{\left(w\right)}^{ 2}}}}}\right)+1}\right]$\end{document} (see Appendix 4.2 for details). In Figure 3A–B, we present a comparison between the model results and experimental data (Basan et al., 2015) in 3D and 2D plots, which demonstrate good agreement. A notable characteristic of energy dissipation, as distinguished from ϕZ\begin{document}$ \displaystyle \phi_{Z}$\end{document} perturbation, is that the fermentation flux increases despite a decrease in the growth rate when κA\begin{document}$ \displaystyle \kappa_{A}$\end{document} is fixed.

![Figure 3.](https://cdn.elifesciences.org/articles/94586/elife-94586-fig3-v2.jpg)

**Figure 3.:** E. coli.(A) A 3D plot of the relations among fermentation flux, growth rate, and the energy dissipation coefficient (see Equations S70 and S160). (B) Growth rate dependence of the acetate excretion rate as the nutrient quality  varies, with each fixed energy dissipation coefficient determined by or fitted from experimental data. (κA\begin{document}$ \displaystyle \kappa_{A}$\end{document}C) A 3D plot of the relations among fermentation flux, growth rate, and the translation efficiency (see Equations 85 and S160). Here, the translation efficiency is adjusted by the dose of chloramphenicol (Cm). (D) Growth rate dependence of the acetate excretion rate as  varies, with each fixed dose of Cm. (κA\begin{document}$ \displaystyle \kappa_{A}$\end{document}E) Coarse-grained model for pyruvate utilization. (F) The growth rate dependence of fermentation flux in pyruvate (see Equations 105 and S160) significantly differs from that of the Group A carbon sources (see Equations 47 and S160).

We proceed to analyze the impact of translation inhibition with different sub-lethal doses of chloramphenicol on E. coli. This type of perturbation introduces an inhibition coefficient ι\begin{document}$ \displaystyle \iota$\end{document} to the translation rate, thus turning κt\begin{document}$ \displaystyle \kappa_{t}$\end{document} into κt/ι+1\begin{document}$\kappa_{t} \big/ \iota+1$\end{document}. Still, the critical growth rate λC(ι)\begin{document}$ \displaystyle {\lambda_{\rm{C}}}\left(\iota\right)$\end{document} follows a Gaussian distribution N(μλC(ι),σλC(ι)2)\begin{document}$ \displaystyle {\cal N}\left({{\mu_{{\lambda_{\rm{C}}}}}\left(\iota\right),{\sigma_{{\lambda_ {\rm{C}}}}}{{\left(\iota\right)}^{2}}}\right)$\end{document}, and then, the growth rate dependence of fermentation flux is given by: Jf(N)=φ⋅λβf(A)⋅[erf(λ−μλC(ι)2σλC(ι))+1]\begin{document}$J_{f}^{\left({\rm{N}}\right)}=\frac{{\varphi\cdot\lambda}}{{\beta_{f}^{\left(A \right)}}}\cdot\left[{{\rm{erf}}\left({\frac{{\lambda-{\mu_{{\lambda_{\rm{C}}} }}\left(\iota\right)}}{{\sqrt{2}{\sigma_{{\lambda_{\rm{C}}}}}\left(\iota\right)}}}\right)+1}\right]$\end{document} (see Appendix 4.3 for details). In Appendix 1—figure 2D and E, we observe that the model predictions are generally consistent with the experimental data (Basan et al., 2015). However, a noticeable systematic discrepancy arises when the translation rate is low. Therefore, we consider maintenance energy, which is typically tiny and generally negligible for bacteria over the growth rate range of interest (Basan et al., 2015; Locasale and Cantley, 2010; Neidhardt, 1996). Encouragingly, by assigning a very small value to the maintenance energy coefficient w0\begin{document}$ \displaystyle w_{0}$\end{document} (where w0=2.5(h−1)\begin{document}${w_{0}}=2.5\left({{{\rm{h}}^{-1}}}\right)$\end{document}), the model results for the growth rate-fermentation flux relation Jf(N)=φ⋅λ+w0βf(A)⋅[erf(λ−μλC(ι)2σλC(ι))+1]\begin{document}$J_{f}^{\left({\text{N}}\right)}=\frac{{\varphi\cdot\lambda+{w_{0}}}}{{\beta_{f}^ {\left(A\right)}}}\cdot\left[{{\rm{erf}}\left({\frac{{\lambda-{\mu_{{\lambda_{ \text{C}}}}}\left(\iota\right)}}{{\sqrt{2}{\sigma_{{\lambda_{\rm{C}}}}}\left(\iota\right)}}}\right)+1}\right]$\end{document} quantitatively agree with experiments (Basan et al., 2015) (see Figure 3C–D and Appendix 4.3 for details).

Finally, we consider the alteration of nutrient categories by switching to a non-Group A carbon source: pyruvate, which enters the metabolic network from the endpoint of glycolysis (Neidhardt et al., 1990; Nelson and Cox, 2008). The coarse-grained model for pyruvate utilization is shown in Figure 3E (see also Figure 1A), which shares identical precursor pools with those for Group A carbon sources, yet has several differences in the coarse-grained reactions. The growth rate dependencies of both the proteome efficiencies (see Appendix 1—figure 2H) and energy fluxes (see Figure 3F) are qualitatively similar to those of Group A carbon source utilization, while there are quantitative differences in the coarse-grained parameters (see Appendices 5.1 and 9 for derivation details). Most notably, the critical growth rate λC(py)\begin{document}$ \displaystyle \lambda_{\rm{C}}^{\left({{\rm{py}}}\right)}$\end{document} and the ATP production per glucose in the fermentation pathway βf(py)\begin{document}$ \displaystyle \beta_{f}^{\left({{\rm{py}}}\right)}$\end{document} for pyruvate utilization are noticeably smaller than those for Group A sources (i.e. λC\begin{document}$ \displaystyle \lambda_{\rm{C}}$\end{document} and βf(A)\begin{document}$ \displaystyle \beta_{f}^{\left(A\right)}$\end{document}, respectively). Consequently, the growth rate dependence of fermentation flux in pyruvate should present a distinctly different curve from that of Group A carbon sources (see Equations 5 and S105), which is fully validated by experimental results (Holms, 1996; see Figure 3F).

## Enzyme allocation under perturbations

As mentioned above, our coarse-grained model is topologically identical to the central metabolic network (see Figure 1A) and can thus predict enzyme allocation for each gene in glycolysis and the TCA cycle (see Appendix 1—figure 1B and Appendix 1—table 1) under various types of perturbations. In Figure 1B, the intermediate nodes M1\begin{document}$ \displaystyle M_{1}$\end{document}, M2\begin{document}$ \displaystyle M_{2}$\end{document}, M3\begin{document}$ \displaystyle M_{3}$\end{document}, M4\begin{document}$ \displaystyle M_{4}$\end{document}, and M5\begin{document}$ \displaystyle M_{5}$\end{document} represent G6P, PEP, acetyl-CoA, α\begin{document}$ \displaystyle \alpha$\end{document}-ketoglutarate, and oxaloacetate, respectively. Therefore, ϕ1\begin{document}$ \displaystyle \phi_{1}$\end{document} and ϕ2\begin{document}$ \displaystyle \phi_{2}$\end{document} correspond to enzymes involved in glycolysis (or at the junction of glycolysis and the TCA cycle), while ϕ3\begin{document}$ \displaystyle \phi_{3}$\end{document} and ϕ4\begin{document}$ \displaystyle \phi_{4}$\end{document} correspond to enzymes in the TCA cycle (see Figure 1A–B and Appendix 3.1).

We first consider enzyme allocation under carbon limitation by varying the nutrient type and concentration of a Group A carbon source (i.e. κA\begin{document}$ \displaystyle \kappa_{A}$\end{document} perturbation). This has been extensively studied in more simplified models (Hui et al., 2015; You et al., 2013), where the growth rate dependence of enzyme allocation under κA\begin{document}$ \displaystyle \kappa_{A}$\end{document} perturbation is generally described by a C-line response (Hui et al., 2015; You et al., 2013). Specifically, the genes responsible for digesting carbon compounds exhibit a linear increase in gene expression as the growth rate decreases (Hui et al., 2015; You et al., 2013). However, when it comes to enzymes catalyzing reactions between intermediate nodes, we gathered experimental data from existing studies (Hui et al., 2015) and found that the enzymes in glycolysis exhibit a completely different response pattern compared to those in the TCA cycle (see Appendix 1—figure 3A and B). This discrepancy cannot be explained by the C-line response. To address this issue, we apply the coarse-grained model described above (see Figure 1B) to calculate the growth rate dependence of enzyme allocation for each ϕi\begin{document}$ \displaystyle \phi_{i}$\end{document} (i=1,2,3,4\begin{document}$ \displaystyle i=1,2,3,4$\end{document}) using model settings for wild-type strains, with no fitting parameters influencing the shape (see Equations S118-S119 and Appendix 9). In Figure 4A–B and Appendix 1—figure 3C-D, we see that the model predictions overall match with the experimental data (Hui et al., 2015) for representative genes from either glycolysis or the TCA cycle, and maintenance energy (with w0=2.5(h−1)\begin{document}${w_{0}}=2.5\,\left({{{\rm{h}}^{-1}}}\right)$\end{document}) has a negligible effect on this process. Still, there are minor discrepancies that arise from the basal expression of metabolic genes, which may be attributed to the fact that our model deals with relatively stable growth conditions while microbes need to be prepared for fluctuating environments (Basan et al., 2020; Kussell and Leibler, 2005; Mori et al., 2017).

We proceed to analyze the influence of ϕZ\begin{document}$ \displaystyle \phi_{Z}$\end{document} perturbation and energy dissipation. In both cases, our model predicts a linear response to growth rate reduction for all genes in either glycolysis or the TCA cycle (see Appendix 6.2–6.3 for details). For ϕZ\begin{document}$ \displaystyle \phi_{Z}$\end{document} perturbation, all predicted slopes are positive, and there are no fitting parameters involved (Equations S120-S121). In Figure 4C–D and Appendix 1—figure 3E-J, we show that our model quantitatively illustrates the experimental data (Basan et al., 2015) for representative genes in the central metabolic network, and there is a better agreement with experiments (Basan et al., 2015) by incorporating the maintenance energy (with w0=2.5(h−1)\begin{document}${w_{0}}=2.5\,\left({{{\rm{h}}^{-1}}}\right)$\end{document} as aforementioned). For energy dissipation, however, the predicted slopes of the enzymes corresponding to ϕ4\begin{document}$ \displaystyle \phi_{4}$\end{document} are negative, and there is a constraint that the slope signs of the enzymes corresponding to the same ϕi\begin{document}$ \displaystyle \phi_{i}$\end{document} (i=1,2,3\begin{document}$ \displaystyle i=1,2,3$\end{document}) should be the same. In Appendix 1—figure 3K-N, we see that the model results (Equations S127 and S123) are consistent with experiments (Basan et al., 2015).

![Figure 4.](https://cdn.elifesciences.org/articles/94586/elife-94586-fig4-v2.jpg)

**Figure 4.:** E. coli under carbon limitation and proteomic perturbation.(A, C) Relative protein expression of representative genes from glycolysis. (B, D) Relative protein expression of representative genes from the TCA cycle. (A, B) Results of the perturbation through changes in nutrient quality  (see κA\begin{document}$ \displaystyle \kappa_{A}$\end{document}Equation S119). (C, D) Results of proteomic perturbation via varied levels of expression of the useless protein LacZ (i.e.  perturbation; see ϕZ\begin{document}$ \displaystyle \phi_{Z}$\end{document}Equation S121).

## Explanation of the Crabtree effect in yeast and the Warburg effect in cancer cells

We proceed to apply our model to explain the Crabtree effect in yeast (Bagamery et al., 2020; De Deken, 1966; Shen et al., 2024) and the Warburg effect in tumors (Bartman et al., 2023; Duraj et al., 2021; Hanahan and Weinberg, 2011; Shen et al., 2024; Vander Heiden et al., 2009) with slight modifications using the optimal growth principle combined with cell heterogeneity (see Appendix 10 and Appendix 1—figure 5). For yeast and tumors, similar to the case of E. coli, the proteome efficiencies εr\begin{document}$ \displaystyle {\varepsilon_{r}}$\end{document} and εf\begin{document}$ \displaystyle {\varepsilon_{f}}$\end{document} are both increasing functions of nutrient quality κA\begin{document}$ \displaystyle \kappa_{A}$\end{document} (see Equation S170). Under poor nutrient conditions (i.e. κA\begin{document}$ \displaystyle \kappa_{A}$\end{document} is small), the proteome efficiency in respiration is higher than that in fermentation: εr>εf\begin{document}$ \displaystyle {\varepsilon_{r}} \gt {\varepsilon_{f}}$\end{document} (see Equations S174-S175), making respiration the optimal choice for growth optimization (see Equation S171). Conversely, when nutrients are abundant and εf>εr\begin{document}$ \displaystyle {\varepsilon_{f}} \gt {\varepsilon_{r}}$\end{document}, aerobic glycolysis (i.e. fermentation) becomes the optimal growth strategy (see Equation S172). Further combination with cell heterogeneity results in the standard picture of overflow metabolism, which has indeed been observed in yeast (van Hoek et al., 1998). However, it remains challenging to tune the growth rate of cancer cells in vivo.

Recently, Shen et al., 2024 discovered that the proteome efficiency measured at the cell population level in respiration (i.e. ⟨εr⟩\begin{document}$ \displaystyle \left\langle{{\varepsilon_{r}}}\right\rangle$\end{document} ; where ‘⟨⟩\begin{document}$\langle\rangle$\end{document}’ denotes the population average) is higher than that in fermentation (i.e. ⟨εf⟩\begin{document}$ \displaystyle \left\langle{{\varepsilon_{f}}}\right\rangle$\end{document}) for many yeast and cancer cells, despite the presence of fermentation fluxes through aerobic glycolysis. Evidently, this finding (Shen et al., 2024) contradicts prevalent explanations (Basan et al., 2015; Chen and Nielsen, 2019), which hold that overflow metabolism arises because the proteome efficiency in fermentation is consistently higher than in respiration. Nevertheless, our model may resolve this puzzle due to the incorporation of two important features. First, our model predicts that the proteome efficiency in respiration is larger than that in fermentation when nutrient quality is low (see Equations S174-S175). Second, and crucially, by accounting for cell heterogeneity, our model allows a proportion of cells to have a higher proteome efficiency in fermentation than in respiration, even when the overall proteome efficiency in respiration at the cell population level is greater than that in fermentation (i.e. ⟨εr⟩>⟨εf⟩\begin{document}$ \displaystyle \left\langle{{\varepsilon_{r}}}\right\rangle \gt \left\langle{{\varepsilon_{f}}}\right\rangle$\end{document}).

To compare our model results quantitatively with experimental data on yeast and tumors (Shen et al., 2024), we define Prf≡Jf(E)Jf(E)+Jr(E)\begin{document}${\Pr}_{f}\equiv\frac{{J_{f}^{\left({\text{E}}\right)}}}{{J_{f}^{\left({\text{E}} \right)}+J_{r}^{\left({\text{E}}\right)}}}$\end{document} as the fraction of ATP produced through fermentation. To account for cell heterogeneity, we apply Gaussian distributions to enzyme turnover numbers, as described above. This yields the relationship between Prf\begin{document}${\Pr}_{f}$\end{document} (i.e.Jf(E)Jf(E)+Jr(E)\begin{document}$\frac{{J_{f}^{\left({\rm{E}}\right)}}}{{J_{f}^{\left({\rm{E}}\right)}+J_{r}^{ \left({\rm{E}}\right)}}}$\end{document}) and ⟨εr⟩\begin{document}$ \displaystyle \left\langle{{\varepsilon_{r}}}\right\rangle$\end{document} and ⟨εf⟩\begin{document}$ \displaystyle \left\langle{{\varepsilon_{f}}}\right\rangle$\end{document} through derivations (see Equations S180-S190 and Appendix 10 for details):(6)Jf(E)Jf(E)+Jr(E)=12[erf(1−⟨εr⟩/⟨εf⟩2⋅χεr2+χεf2⋅(⟨εr⟩/⟨εf⟩)2)+1],\begin{document}$$\displaystyle \frac{{J_{f}^{\left({\text{E}}\right)}}}{{J_{f}^{\left({\text{E}}\right)}+J_{r}^{\left({\text{E}}\right)}}}=\frac{1}{2}\left[{{\text{erf}}\left({\frac{1-\left\langle{{\varepsilon_{r}}}\right\rangle \big / \left\langle{{\varepsilon_{f}}}\right\rangle}{{\sqrt{2}\cdot\sqrt{\chi_{{\varepsilon_{r}}}^{2}+\chi_{{\varepsilon_{f}}}^{2}\cdot {\left({{{\left\langle{{\varepsilon_{r}}}\right\rangle} \big/ \left\langle{{\varepsilon_{f}}}\right\rangle}}\right)}^{2}}}}}\right)+1}\right],$$\end{document}

where χεr\begin{document}$ \displaystyle {\chi_{{\varepsilon_{r}}}}$\end{document} and χεf\begin{document}$ \displaystyle {\chi_{{\varepsilon_{f}}}}$\end{document} represent the CVs of proteome efficiencies εr\begin{document}$ \displaystyle {\varepsilon_{r}}$\end{document} and εf\begin{document}$ \displaystyle {\varepsilon_{f}}$\end{document}, respectively. Due to the higher levels of cell heterogeneity in yeast (Bagamery et al., 2020) and cancer cells (Duraj et al., 2021; Shibao et al., 2018; Hanahan and Weinberg, 2011; Hensley et al., 2016), the CVs of εr\begin{document}$ \displaystyle {\varepsilon_{r}}$\end{document} and εf\begin{document}$ \displaystyle {\varepsilon_{f}}$\end{document} (i.e. χεr\begin{document}$ \displaystyle {\chi_{{\varepsilon_{r}}}}$\end{document} and χεf\begin{document}$ \displaystyle {\chi_{{\varepsilon_{f}}}}$\end{document}) in these cells are expected to be significantly higher than those in E. coli, although their precise values are unknown. The values for the variables shown in Equation 6 can be obtained from experiments. Therefore, we plot the theoretical results from Equation 6 using χεr\begin{document}$ \displaystyle {\chi_{{\varepsilon_{r}}}}$\end{document} and χεf\begin{document}$ \displaystyle {\chi_{{\varepsilon_{f}}}}$\end{document} values of 0.25, 0.40, and 0.58 to compare with experimental data from yeast and in vivo mouse tumors (Bartman et al., 2023; Shen et al., 2024). As shown in Figure 5A–B, the theoretical results with χεr=χεf=0.58\begin{document}$ \displaystyle {\chi_{{\varepsilon_{r}}}}={\chi_{{\varepsilon_{f}}}}=0.58$\end{document} align quantitatively with the experimental data (Bartman et al., 2023; Shen et al., 2024) on both logarithmic and linear scales, demonstrating that our model has the potential to quantitatively explain the Crabtree effect in yeast and the Warburg effect in cancer cells.

![Figure 5.](https://cdn.elifesciences.org/articles/94586/elife-94586-fig5-v2.jpg)

**Figure 5.:** (A) A linear scale representation on the -axis. (y\begin{document}$ \displaystyle y$\end{document}B) A log scale representation on the -axis. In (y\begin{document}$ \displaystyle y$\end{document}A–B),  and ⟨εr⟩\begin{document}$ \displaystyle \left\langle{{\varepsilon_{r}}}\right\rangle$\end{document} represent the population averages of ⟨εf⟩\begin{document}$ \displaystyle \left\langle{{\varepsilon_{f}}}\right\rangle$\end{document} and εr\begin{document}$ \displaystyle {\varepsilon_{r}}$\end{document}, while εf\begin{document}$ \displaystyle {\varepsilon_{f}}$\end{document} and χεr\begin{document}$ \displaystyle {\chi_{{\varepsilon_{r}}}}$\end{document} are the coefficients of variation (CVs) of χεf\begin{document}$ \displaystyle {\chi_{{\varepsilon_{f}}}}$\end{document} and εr\begin{document}${\varepsilon_{r}}$\end{document} represents the ratio of proteome efficiency between respiration and fermentation at the population-averaged level, while εf⋅⟨εr⟩/⟨εf⟩\begin{document}${\varepsilon_{f}}\cdot {\left\langle{{\varepsilon_{r}}}\right\rangle} \big/{\left\langle{{\varepsilon_{f}}}\right\rangle}$\end{document} stands for the fraction of energy flux generated by the fermentation pathway (see Jf(E)/(Jf(E)+Jr(E))\begin{document}$ {J_{f}^{\left({\text{E}}\right)}} \big/ {\left({J_{f}^{\left({\text{E}}\right)}+J_{r}^{ \left({\text{E}}\right)}}\right)}$\end{document}Equation 6). The data for yeast in batch culture and chemostat were calculated from experimental data of S. cerevisiae and I. orientalis (Shen et al., 2024). The data for mouse tumors were calculated from in vivo experimental data of pancreatic ductal adenocarcinoma (PDAC) and leukemic spleen of mice (Bartman et al., 2023; Shen et al., 2024). See Appendix 11 for detailed information on the experimental data sources (Bartman et al., 2023; Shen et al., 2024).

## Discussion

The phenomenon of overflow metabolism, or the Warburg effect, has been a long-standing puzzle in cell metabolism. Although many rationales have been proposed over the past century (Basan et al., 2015; Chen and Nielsen, 2019; Majewski and Domach, 1990; Molenaar et al., 2009; Niebel et al., 2019; Peebo et al., 2015; Pfeiffer et al., 2001; Shlomi et al., 2011; Vander Heiden et al., 2009; Varma and Palsson, 1994; Vazquez et al., 2010; Zhuang et al., 2011), contradictions persist (Shen et al., 2024), leaving the origin and function of this phenomenon unclear (DeBerardinis and Chandel, 2020; Hanahan and Weinberg, 2011; Vander Heiden et al., 2009). In this study, we use E. coli as a typical example and demonstrate that overflow metabolism can be understood through optimal protein allocation combined with cell heterogeneity. Under nutrient-poor conditions, the proteome efficiency of respiration is higher than that of fermentation (see Figure 1E), and thus the cell uses respiration to optimize growth. In rich media, however, the proteome efficiency of fermentation increases more rapidly and surpasses that of respiration (see Figure 1E), leading the cell to adopt fermentation as the optimal growth strategy. In further combination with cell heterogeneity in enzyme catalytic rates (Davidi et al., 2016; García-Contreras et al., 2012), our model quantitatively illustrates the threshold-analog response (Basan et al., 2015; Holms, 1996) in overflow metabolism (see Figure 1C). Furthermore, it quantitatively explains the data on the Crabtree effect in yeast and the Warburg effect in cancer cells (Bartman et al., 2023; Shen et al., 2024).

Mechanistically, the optimal growth strategy for the binary choice between respiration and fermentation can be facilitated by the direct sensing and comparison of proteome efficiencies between the two pathways (see Appendix 3.4). A growing body of evidence suggests that the cyclic AMP (cAMP)-cAMP receptor protein (CRP) system plays a crucial role in sensing proteome efficiency and executing the optimal strategy (Basan et al., 2015; Towbin et al., 2017; Valgepea et al., 2010; Wehrens et al., 2023). However, it has also been suggested that the cAMP-CRP system alone is insufficient, and that additional regulators remain to be identified to fully elucidate this mechanism (Basan et al., 2015; Valgepea et al., 2010). Furthermore, since the binary choice between respiration and fermentation is driven by the comparison of proteome efficiencies, the optimal growth principle in our model can be relaxed to the case where efficient protein allocation is required only for enzymes, rather than ribosomes. This allows our model to remain applicable under suboptimal growth conditions (see Appendix 3.4 for details), where recent experimental studies have shown that the inactive portion of ribosomes (i.e. ribosomes not bound to mRNAs) may vary with culturing conditions (Dai et al., 2017; Li et al., 2018) and between individual cells within the same culture (Pavlou et al., 2025), despite an overall trend toward growth optimization.

In existing rationales (Basan et al., 2015; Chen and Nielsen, 2019; Majewski and Domach, 1990; Shlomi et al., 2011; Varma and Palsson, 1994; Vazquez et al., 2010; Vazquez and Oltvai, 2016), the standard picture of overflow metabolism (Basan et al., 2015; Holms, 1996; Meyer et al., 1984; Nanchen et al., 2006; van Hoek et al., 1998) has primarily been illustrated by a threshold-linear response, which largely relies on the assumption that cells optimize their growth rate for a given rate of carbon influx under each nutrient condition (or similar equivalents; see Appendix 7.3). However, in practice, for microbes or tumor cells grown in vitro or in vivo, the given factors are the identity and concentration of the nutrient (Molenaar et al., 2009; Scott et al., 2010; Wang et al., 2019), rather than the rate of carbon influx. Additionally, prevalent explanations (Basan et al., 2015; Chen and Nielsen, 2019) suggest that overflow metabolism originates from the proteome efficiency in fermentation always being higher than that in respiration (see Appendix 7.3 for details). While it has been observed in E. coli that proteome efficiency in fermentation is higher than that in respiration for cells cultured in lactose at saturated concentration (Basan et al., 2015), Shen et al., 2024 reported that for many yeast and cancer cells, the proteome efficiency in fermentation is noticeably lower than that in respiration, despite the presence of aerobic glycolytic fermentation flux. This observation (Shen et al., 2024) evidently contradicts the prevalent explanations (Basan et al., 2015; Chen and Nielsen, 2019). Our model resolves this puzzle by significantly differing from existing rationales in its optimization principle, where we optimize cell growth rate purely through protein allocation without imposing a special constraint on carbon influx (see Appendix 7.3 for details). More importantly, our model incorporates cell heterogeneity, which is crucial for both explaining the threshold-analog response in overflow metabolism and for resolving this puzzle raised by Shen et al., 2024.

In the homogeneous case, the optimal growth strategy for growth rate dependent fermentation flux results in a digital response (see Equation S44), corresponding to an elementary flux mode (Müller et al., 2014; Wortel et al., 2014), which aligns with the numerical study by Molenaar et al., 2009 but is incompatible with the standard picture of overflow metabolism (Basan et al., 2015; Holms, 1996; Meyer et al., 1984; Nanchen et al., 2006; van Hoek et al., 1998). Furthermore, in this case, cells would not generate fermentation flux if the proteome efficiency in fermentation were lower than that in respiration, under the optimal growth framework. By incorporating heterogeneity in enzyme catalytic rates (Davidi et al., 2016; García-Contreras et al., 2012), the critical growth rate (i.e. threshold) shifts from a single value to a Gaussian distribution (see Equation S45 and Appendix 8 for details; see also Appendix 1—figure 4) across a cell population, thereby turning a digital response into the threshold-analog response observed in overflow metabolism (see Figure 1C). Moreover, cell heterogeneity allows a fraction of cells to possess a larger proteome efficiency in fermentation than in respiration despite the overall proteome efficiency in respiration at the cell population level is higher than in fermentation. This mechanism facilitates the fermentation flux in yeast and cancer cells observed by Shen et al., 2024 (see Figure 5A–B).

Our model results, based on cell heterogeneity, are further supported by observed distributions of single-cell growth rates in E. coli (Wallden et al., 2016) (see Appendix 1—figure 2B), as well as by experiments involving various types of perturbations (Basan et al., 2015; Holms, 1996; Hui et al., 2015), both in terms of acetate secretion patterns and gene expression in the central metabolic network (see Figures 2—4, Appendix 1—figures 2D and E and 3). Furthermore, the heterogeneity patterns predicted by our model for fermentation and respiration modes in an isogenic cell population under the same culturing conditions are highly consistent with the non-genetic heterogeneity observed in single-cell experiments with E. coli (Nikolic et al., 2013) and S. cerevisiae (Bagamery et al., 2020), and align with experiments on intra-tumor heterogeneity in glioblastoma (Duraj et al., 2021; Shibao et al., 2018). Finally, our model can be broadly applied to address heterogeneity-related challenges in metabolism on a quantitative basis, including diverse metabolic strategies of cells in various environments (Bagamery et al., 2020; Duraj et al., 2021; Escalante-Chong et al., 2015; Hensley et al., 2016; Liu et al., 2015; Solopova et al., 2014; Wang et al., 2019).
